번역 업데이트

--- a/localisation/PER_victory_points_l_english.yml
+++ b/localisation/PER_victory_points_l_english.yml
@@ -25,7 +25,7 @@
  VICTORY_POINTS_7193:0 "리마솔"
  VICTORY_POINTS_7639:0 "두샨베"
  VICTORY_POINTS_11687:0 "후잔트"
- VICTORY_POINTS_12333:0 "아슈하바트"
+ VICTORY_POINTS_12333:0 "아시하바트"
  VICTORY_POINTS_10742:0 "투르크메나바트"
  VICTORY_POINTS_7560:0 "메르브"
  VICTORY_POINTS_1554:0 "사마르칸트"
