--- a/localisation/bav_focus_l_english.yml
+++ b/localisation/bav_focus_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  BAV_munich_constituion:0 "뮌헨 헌법"
- BAV_munich_constituion_desc:0 "1936년의 뮌헨 헌법은 바바리아의 노동자와 시민들에게 그들의 권리를 보장했고, 거대한 정부, 군사, 산업 개혁의 물결을 만들었습니다."
+ BAV_munich_constituion_desc:0 "1936년의 뮌헨 헌법은 바이에른의 노동자들과 시민들의 권리를 보장하였고, 거대한 정부, 군사, 산업 개혁의 물결을 만들었습니다."
  BAV_five_year_plan:0 "5개년 계획"
  BAV_five_year_plan_desc:0 "에른스트 텔만의 5년 계획은 우리의 산업 능력을 향상시키고 우리 사회를 동원할 것입니다."
  BAV_reform_high_command:0 "최고 사령부 재조직"
