--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2788,18 +2788,18 @@
  GER_great_fascism_DEF:0 "대독일국"
  GER_great_neutrality:0 "대독일국"
  GER_great_neutrality_DEF:0 "대독일국"
- AUS_vaterland_fascism:0 "대오스트리아"
- AUS_vaterland_fascism_DEF:0 "대오스트리아 제국"
- AUS_vaterland_democratic:0 "오스트리아 독일 공화국"
- AUS_vaterland_democratic_DEF:0 "오스트리아 독일 공화국"
- AUS_vaterland_communism:0 "오스트리아-독일 사회주의 공화국"
- AUS_vaterland_communism_DEF:0 "오스트리아-독일 사회주의 공화국"
- AUS_vaterland_neutrality:0 "독일-오스트리아국"
- AUS_vaterland_neutrality_DEF:0 "독일-오스트리아국"
+ AUS_vaterland_fascism:0 "대게르만국"
+ AUS_vaterland_fascism_DEF:0 "대게르만국"
+ AUS_vaterland_democratic:0 "독일계 오스트리아 공화국"
+ AUS_vaterland_democratic_DEF:0 "독일계 오스트리아 공화국"
+ AUS_vaterland_communism:0 "독일계 오스트리아 사회주의 공화국"
+ AUS_vaterland_communism_DEF:0 "독일계 오스트리아 사회주의 공화국"
+ AUS_vaterland_neutrality:0 "독일계 오스트리아국"
+ AUS_vaterland_neutrality_DEF:0 "독일계 오스트리아국"
  AUS_vaterland_fascism_ADJ:0 "오스트리아"
  AUS_vaterland_democratic_ADJ:0 "오스트리아"
- AUS_vaterland_communism_ADJ:0 "오스트리아-독일"
- AUS_vaterland_neutrality_ADJ:0 "독일-오스트리아"
+ AUS_vaterland_communism_ADJ:0 "독일계 오스트리아"
+ AUS_vaterland_neutrality_ADJ:0 "독일계 오스트리아"
  FRA_2_fascism:0 "프랑스 제국"
  FRA_2_fascism_DEF:0 "프랑스 제국"
  FRA_2_democratic:0 "프랑스"
@@ -3003,21 +3003,21 @@
  BRM_fascism:0 "버마"
  BRM_fascism_DEF:0 "버마"
  BRM_fascism_ADJ:0 "버마"
- RMN_neutrality:0 "러시아령 만주"
- RMN_neutrality_DEF:0 "러시아령 만주국"
- RMN_neutrality_ADJ:0 "만주국"
- RMN_conservatives:0 "러시아령 만주국"
- RMN_conservatives_DEF:0 "러시아령 만주국"
- RMN_conservatives_ADJ:0 "만주국"
- RMN_democratic:0 "러시아령 만주국"
- RMN_democratic_DEF:0 "러시아령 만주국"
- RMN_democratic_ADJ:0 "만주국"
- RMN_socialist:0 "러시아령 만주국"
- RMN_socialist_DEF:0 "러시아령 만주국"
- RMN_socialist_ADJ:0 "만주국"
- RMN_fascism:0 "러시아령 만주국"
- RMN_fascism_DEF:0 "러시아령 만주국"
- RMN_fascism_ADJ:0 "만주국"
+ RMN_neutrality:0 "젤토로시야"
+ RMN_neutrality_DEF:0 "젤토로시야"
+ RMN_neutrality_ADJ:0 "젤토로시야"
+ RMN_conservatives:0 "젤토로시야"
+ RMN_conservatives_DEF:0 "젤토로시야"
+ RMN_conservatives_ADJ:0 "젤토로시야"
+ RMN_democratic:0 "젤토로시야"
+ RMN_democratic_DEF:0 "젤토로시야"
+ RMN_democratic_ADJ:0 "젤토로시야"
+ RMN_socialist:0 "젤토로시야"
+ RMN_socialist_DEF:0 "젤토로시야"
+ RMN_socialist_ADJ:0 "젤토로시야"
+ RMN_fascism:0 "젤토로시야"
+ RMN_fascism_DEF:0 "젤토로시야"
+ RMN_fascism_ADJ:0 "젤토로시야"
  BAL_democratic:0 "발트 연합공국"
  BAL_democratic_DEF:0 "발트 연합공국"
  BAL_democratic_ADJ:0 "발트"
