--- a/localisation/equip_air_l_english.yml
+++ b/localisation/equip_air_l_english.yml
@@ -15,10 +15,10 @@
  cv_nav_bomber:0 "뇌격기(함재기)"
  cv_nav_bomber_equipment_desc:0 "뇌격기는 적 함선에 대한 공격을 수행 할 수 있습니다."
  tac_bomber:0 "전술폭격기"
- tac_bomber_equipment_desc:0 "전술폭격기는 지상군을 도와 줄 수 있고 적 건물을 폭격 할 수 있는 작고 빠른 폭격기입니다."
+ tac_bomber_equipment_desc:0 "전술폭격기는 지상군을 지원하고 적의 건물을 폭격할 수 있는 작고 빠른 폭격기입니다."
  jet_tac_bomber:2 "제트전술폭격기"
  jet_tac_bomber_equipment:2 "제트전술폭격기"
- jet_tac_bomber_equipment_desc:0 "전술폭격기는 지상군을 도와 줄 수 있고 적 건물을 폭격 할 수 있는 작고 빠른 폭격기입니다."
+ jet_tac_bomber_equipment_desc:0 "전술폭격기는 지상군을 지원하고 적의 건물을 폭격할 수 있는 작고 빠른 폭격기입니다."
  heavy_fighter:0 "중전투기"
  heavy_fighter_equipment_desc:0 "중전투기는 긴 항속거리와 강력한 무장을 가지고 있습니다. 중전투기는 범위 내 아군 폭격기 보호와 적군 폭격기 요격 둘 다 적합합니다.  하지만 제한적인 기동성은 일반 전투기들과의 싸움에서는 불리하게 작용할 것입니다."
  strat_bomber:0 "전략폭격기"
@@ -139,7 +139,7 @@
  cv_CAS_equipment_3:0 "함재 근접항공지원기 III"
  cv_CAS_equipment_3_short:0 "함재 근접항공지원기 III"
  cv_CAS_equipment_3_desc:0 "이 진보된 근접항공지원기들은 항공모함에서 이착함할 수 있도록 개조되었습니다."
- cv_fighter_equipment_0:0 "1차 대전 함재 전투기"
+ cv_fighter_equipment_0:0 "전간기 함재 전투기"
  cv_fighter_equipment_0_short:0 "함재 전투기"
  cv_fighter_equipment_0_desc:0 "이 초기 전투기들은 항공모함에서 이착함할 수 있도록 개조되었습니다."
  cv_fighter_equipment_1:0 "함재 전투기 I"
@@ -317,11 +317,11 @@
  ENG_fighter_equipment_2_short:0 "스핏파이어"
  ENG_fighter_equipment_3:0 "슈퍼마린 스파이트풀"
  ENG_fighter_equipment_3_short:0 "스파이트풀"
- ENG_heavy_fighter_equipment_1:0 "브리스톨 블렌하임"
- ENG_heavy_fighter_equipment_1_short:0 "블렌하임"
+ ENG_heavy_fighter_equipment_1:0 "브리스톨 블레넘"
+ ENG_heavy_fighter_equipment_1_short:0 "블레넘"
  ENG_heavy_fighter_equipment_2:0 "브리스톨 보파이터"
  ENG_heavy_fighter_equipment_2_short:0 "보파이터"
- ENG_heavy_fighter_equipment_3:0 "드 하빌랜드 모스키토 FB"
+ ENG_heavy_fighter_equipment_3:0 "더 해빌런드 모스키토 FB"
  ENG_heavy_fighter_equipment_3_short:0 "모스키토 FB"
  ENG_strat_bomber_equipment_1:0 "핸들리 페이지 핼리팩스"
  ENG_strat_bomber_equipment_1_short:0 "핼리팩스"
@@ -331,7 +331,7 @@
  ENG_strat_bomber_equipment_3_short:0 "링컨"
  ENG_jet_fighter_equipment_1:0 "글로스터 미티어"
  ENG_jet_fighter_equipment_1_short:0 "미티어"
- ENG_jet_fighter_equipment_2:0 "드 하빌랜드 뱀파이어"
+ ENG_jet_fighter_equipment_2:0 "더 해빌런드 뱀파이어"
  ENG_jet_fighter_equipment_2_short:0 "뱀파이어"
  ENG_jet_strat_bomber_equipment_1:0 "빅커스 발리언트"
  ENG_jet_strat_bomber_equipment_1_short:0 "발리언트"
@@ -341,9 +341,9 @@
  ENG_tac_bomber_equipment_1_short:0 "웰링턴"
  ENG_tac_bomber_equipment_2:0 "브리스톨 보포트"
  ENG_tac_bomber_equipment_2_short:0 "보포트"
- ENG_tac_bomber_equipment_3:0 "드 하빌랜드 모스키토 B"
+ ENG_tac_bomber_equipment_3:0 "더 해빌런드 모스키토 B"
  ENG_tac_bomber_equipment_3_short:0 "모스키토 B"
- ENG_jet_tac_bomber_equipment_1:0 "드 하빌랜드 베놈"
+ ENG_jet_tac_bomber_equipment_1:0 "더 해빌런드 베놈"
  ENG_jet_tac_bomber_equipment_1_short:0 "베놈"
  ENG_jet_tac_bomber_equipment_2:0 "잉글리쉬 일렉트릭 캔버라"
  ENG_jet_tac_bomber_equipment_2_short:0 "캔버라"
@@ -409,16 +409,16 @@
  NZL_fighter_equipment_3_short:0 "스파이트풀"
  SAF_fighter_equipment_3_short:0 "스파이트풀"
  RAJ_fighter_equipment_3_short:0 "스파이트풀"
- CAN_heavy_fighter_equipment_1:0 "브리스톨 블렌하임"
- AST_heavy_fighter_equipment_1:0 "브리스톨 블렌하임"
- NZL_heavy_fighter_equipment_1:0 "브리스톨 블렌하임"
- SAF_heavy_fighter_equipment_1:0 "브리스톨 블렌하임"
- RAJ_heavy_fighter_equipment_1:0 "브리스톨 블렌하임"
- CAN_heavy_fighter_equipment_1_short:0 "블렌하임"
- AST_heavy_fighter_equipment_1_short:0 "블렌하임"
- NZL_heavy_fighter_equipment_1_short:0 "블렌하임"
- SAF_heavy_fighter_equipment_1_short:0 "블렌하임"
- RAJ_heavy_fighter_equipment_1_short:0 "블렌하임"
+ CAN_heavy_fighter_equipment_1:0 "브리스톨 블레넘"
+ AST_heavy_fighter_equipment_1:0 "브리스톨 블레넘"
+ NZL_heavy_fighter_equipment_1:0 "브리스톨 블레넘"
+ SAF_heavy_fighter_equipment_1:0 "브리스톨 블레넘"
+ RAJ_heavy_fighter_equipment_1:0 "브리스톨 블레넘"
+ CAN_heavy_fighter_equipment_1_short:0 "블레넘"
+ AST_heavy_fighter_equipment_1_short:0 "블레넘"
+ NZL_heavy_fighter_equipment_1_short:0 "블레넘"
+ SAF_heavy_fighter_equipment_1_short:0 "블레넘"
+ RAJ_heavy_fighter_equipment_1_short:0 "블레넘"
  CAN_heavy_fighter_equipment_2:0 "브리스톨 보파이터"
  AST_heavy_fighter_equipment_2:0 "브리스톨 보파이터"
  NZL_heavy_fighter_equipment_2:0 "브리스톨 보파이터"
@@ -429,11 +429,11 @@
  NZL_heavy_fighter_equipment_2_short:0 "보파이터"
  SAF_heavy_fighter_equipment_2_short:0 "보파이터"
  RAJ_heavy_fighter_equipment_2_short:0 "보파이터"
- CAN_heavy_fighter_equipment_3:0 "드 하빌랜드 모스키토 FB"
- AST_heavy_fighter_equipment_3:0 "드 하빌랜드 모스키토 FB"
- NZL_heavy_fighter_equipment_3:0 "드 하빌랜드 모스키토 FB"
- SAF_heavy_fighter_equipment_3:0 "드 하빌랜드 모스키토 FB"
- RAJ_heavy_fighter_equipment_3:0 "드 하빌랜드 모스키토 FB"
+ CAN_heavy_fighter_equipment_3:0 "더 해빌런드 모스키토 FB"
+ AST_heavy_fighter_equipment_3:0 "더 해빌런드 모스키토 FB"
+ NZL_heavy_fighter_equipment_3:0 "더 해빌런드 모스키토 FB"
+ SAF_heavy_fighter_equipment_3:0 "더 해빌런드 모스키토 FB"
+ RAJ_heavy_fighter_equipment_3:0 "더 해빌런드 모스키토 FB"
  CAN_heavy_fighter_equipment_3_short:0 "모스키토 FB"
  AST_heavy_fighter_equipment_3_short:0 "모스키토 FB"
  NZL_heavy_fighter_equipment_3_short:0 "모스키토 FB"
@@ -477,9 +477,9 @@
  NZL_jet_fighter_equipment_1_short:0 "미티어"
  SAF_jet_fighter_equipment_1_short:0 "미티어"
  RAJ_jet_fighter_equipment_1_short:0 "미티어"
- NZL_jet_fighter_equipment_2:0 "드 하빌랜드 뱀파이어"
- SAF_jet_fighter_equipment_2:0 "드 하빌랜드 뱀파이어"
- RAJ_jet_fighter_equipment_2:0 "드 하빌랜드 뱀파이어"
+ NZL_jet_fighter_equipment_2:0 "더 해빌런드 뱀파이어"
+ SAF_jet_fighter_equipment_2:0 "더 해빌런드 뱀파이어"
+ RAJ_jet_fighter_equipment_2:0 "더 해빌런드 뱀파이어"
  NZL_jet_fighter_equipment_2_short:0 "뱀파이어"
  SAF_jet_fighter_equipment_2_short:0 "뱀파이어"
  RAJ_jet_fighter_equipment_2_short:0 "뱀파이어"
@@ -523,21 +523,21 @@
  NZL_tac_bomber_equipment_2_short:0 "보포트"
  SAF_tac_bomber_equipment_2_short:0 "보포트"
  RAJ_tac_bomber_equipment_2_short:0 "보포트"
- CAN_tac_bomber_equipment_3:0 "드 하빌랜드 모스키토 B"
- AST_tac_bomber_equipment_3:0 "드 하빌랜드 모스키토 B"
- NZL_tac_bomber_equipment_3:0 "드 하빌랜드 모스키토 B"
- SAF_tac_bomber_equipment_3:0 "드 하빌랜드 모스키토 B"
- RAJ_tac_bomber_equipment_3:0 "드 하빌랜드 모스키토 B"
+ CAN_tac_bomber_equipment_3:0 "더 해빌런드 모스키토 B"
+ AST_tac_bomber_equipment_3:0 "더 해빌런드 모스키토 B"
+ NZL_tac_bomber_equipment_3:0 "더 해빌런드 모스키토 B"
+ SAF_tac_bomber_equipment_3:0 "더 해빌런드 모스키토 B"
+ RAJ_tac_bomber_equipment_3:0 "더 해빌런드 모스키토 B"
  CAN_tac_bomber_equipment_3_short:0 "모스키토 B"
  AST_tac_bomber_equipment_3_short:0 "모스키토 B"
  NZL_tac_bomber_equipment_3_short:0 "모스키토 B"
  SAF_tac_bomber_equipment_3_short:0 "모스키토 B"
  RAJ_tac_bomber_equipment_3_short:0 "모스키토 B"
- CAN_jet_tac_bomber_equipment_1:0 "드 하빌랜드 베놈"
- AST_jet_tac_bomber_equipment_1:0 "드 하빌랜드 베놈"
- NZL_jet_tac_bomber_equipment_1:0 "드 하빌랜드 베놈"
- SAF_jet_tac_bomber_equipment_1:0 "드 하빌랜드 베놈"
- RAJ_jet_tac_bomber_equipment_1:0 "드 하빌랜드 베놈"
+ CAN_jet_tac_bomber_equipment_1:0 "더 해빌런드 베놈"
+ AST_jet_tac_bomber_equipment_1:0 "더 해빌런드 베놈"
+ NZL_jet_tac_bomber_equipment_1:0 "더 해빌런드 베놈"
+ SAF_jet_tac_bomber_equipment_1:0 "더 해빌런드 베놈"
+ RAJ_jet_tac_bomber_equipment_1:0 "더 해빌런드 베놈"
  CAN_jet_tac_bomber_equipment_1_short:0 "베놈"
  AST_jet_tac_bomber_equipment_1_short:0 "베놈"
  NZL_jet_tac_bomber_equipment_1_short:0 "베놈"
@@ -743,35 +743,35 @@
  USA_jet_tac_bomber_equipment_2_short:0 "XB-51"
  USA_nav_bomber_equipment_1:0 "PBY 카탈리나"
  USA_nav_bomber_equipment_1_short:0 "카탈리나"
- USA_nav_bomber_equipment_2:1 "PBM 마리너"
+ USA_nav_bomber_equipment_2:1 "그러먼 TBF 어벤저"
  USA_nav_bomber_equipment_2_short:1 "마리너"
  USA_nav_bomber_equipment_3:0 "PB4Y-2 프라이버티어"
  USA_nav_bomber_equipment_3_short:0 "프라이버티어"
  USA_cv_CAS_equipment_1:0 "노스롭 BT"
  USA_cv_CAS_equipment_1_short:0 "노스롭 BT"
- USA_CAS_equipment_2:0 "A-20 하복"
- USA_CAS_equipment_2_short:0 "A-20"
- USA_CAS_equipment_3:0 "A-26 인베이더"
- USA_CAS_equipment_3_short:0 "A-26"
+ USA_CAS_equipment_2:0 "더글러스 SBD 돈틀레스"
+ USA_CAS_equipment_2_short:0 "SBD 돈틀레스"
+ USA_CAS_equipment_3:0 "커티스 SB2C 헬다이버"
+ USA_CAS_equipment_3_short:0 "SB2C 헬다이버"
  USA_cv_nav_bomber_equipment_1:0 "더글러스 TBD 데버스테이터"
  USA_cv_nav_bomber_equipment_1_short:0 "TBD 데버스테이터"
- USA_cv_nav_bomber_equipment_2:0 "그루먼 TBF-1C 어벤저"
+ USA_cv_nav_bomber_equipment_2:0 "그러먼 TBF-1C 어벤저"
  USA_cv_nav_bomber_equipment_2_short:0 "TBF-1C 어벤저"
- USA_cv_nav_bomber_equipment_3:0 "더글러스 BTD 디스트로이어"
- USA_cv_nav_bomber_equipment_3_short:0 "BTD 디스트로이어"
+ USA_cv_nav_bomber_equipment_3:0 "컨살러데이티드 TBY 시울프"
+ USA_cv_nav_bomber_equipment_3_short:0 "TBY 시울프"
  USA_CAS_equipment_1:0 "노스롭 A-17"
  USA_CAS_equipment_1_short:0 "A-17"
- USA_cv_CAS_equipment_2:0 "더글러스 SBD-2 돈틀리스"
- USA_cv_CAS_equipment_2_short:0 "SBD-2 돈틀리스"
+ USA_cv_CAS_equipment_2:0 "더글러스 SBD-2 돈틀레스"
+ USA_cv_CAS_equipment_2_short:0 "SBD-2 돈틀레스"
  USA_cv_CAS_equipment_3:0 "커티스 SB2C-1s 헬다이버"
  USA_cv_CAS_equipment_3_short:0 "SB2C-1s 헬다이버"
- USA_cv_fighter_equipment_0:0 "그루먼 FF '피피'"
+ USA_cv_fighter_equipment_0:0 "그러먼 FF '피피'"
  USA_cv_fighter_equipment_0_short:0 "FF '피피'"
- USA_cv_fighter_equipment_1:0 "그루먼 F3F"
+ USA_cv_fighter_equipment_1:0 "그러먼 F3F"
  USA_cv_fighter_equipment_1_short:0 "F3F"
- USA_cv_fighter_equipment_2:0 "그루먼 F4F 와일드캣"
+ USA_cv_fighter_equipment_2:0 "그러먼 F4F 와일드캣"
  USA_cv_fighter_equipment_2_short:0 "F4F 와일드캣"
- USA_cv_fighter_equipment_3:0 "그루먼 F6F 헬캣"
+ USA_cv_fighter_equipment_3:0 "그러먼 F6F 헬캣"
  USA_cv_fighter_equipment_3_short:0 "F6F 헬캣"
  RUS_fighter_equipment_0:0 "폴리카르포프 I-15"
  RUS_fighter_equipment_0_short:0 "I-15"
@@ -797,7 +797,7 @@
  RUS_jet_fighter_equipment_1_short:0 "MiG-9"
  RUS_jet_fighter_equipment_2:0 "미코얀-구레비치 MiG-15"
  RUS_jet_fighter_equipment_2_short:0 "MiG-15"
- RUS_jet_strat_bomber_equipment_1:0 "마이셰프 M-4"
+ RUS_jet_strat_bomber_equipment_1:0 "미야시셰프 M-4"
  RUS_jet_strat_bomber_equipment_1_short:0 "M-4"
  RUS_tac_bomber_equipment_0:0 "일류신 DB-3"
  RUS_tac_bomber_equipment_0_short:0 "DB-3"
@@ -1095,7 +1095,7 @@
  BUL_CAS_equipment_1_short:0 "DAR-3"
  BUL_CAS_equipment_2:0 "DAR-10"
  BUL_CAS_equipment_2_short:0 "DAR-10"
- CAN_jet_fighter_equipment_1:0 "드 하빌랜드 뱀파이어"
+ CAN_jet_fighter_equipment_1:0 "더 해빌런드 뱀파이어"
  CAN_jet_fighter_equipment_1_short:0 "뱀파이어"
  CAN_jet_fighter_equipment_2:0 "CL 100 카누크"
  CAN_jet_fighter_equipment_2_short:0 "CL 100 카누크"
@@ -1215,8 +1215,8 @@
  FIN_nav_bomber_equipment_1_short:0 "VL 콧카"
  FIN_CAS_equipment_1:0 "포커-VL C.X"
  FIN_CAS_equipment_1_short:0 "포커-VL C.X"
- FIN_tac_bomber_equipment_1:0 "브리스톨-VL 블렌하임"
- FIN_tac_bomber_equipment_1_short:0 "블렌하임"
+ FIN_tac_bomber_equipment_1:0 "브리스톨-VL 블레넘"
+ FIN_tac_bomber_equipment_1_short:0 "블레넘"
  NOR_fighter_equipment_0:0 "F.F. 7 호크"
  NOR_fighter_equipment_0_short:0 "호크"
  NOR_nav_bomber_equipment_1:0 "M.F. 11"
