--- a/localisation/equip_naval_l_english.yml
+++ b/localisation/equip_naval_l_english.yml
@@ -157,8 +157,8 @@
  ENG_heavy_cruiser_4_desc:0 "이 함선은 2차세계대전 초기 독일의 도이칠란트급 대구경함포 순양함에 대항하기 위해 해군장관 윈스턴 처칠 경에 의해 제안되었다. 이 함선은 9.2인치 함포, 중무장 대공포 그리고 강력한 장갑을 가졌으며 적 주력함과의 효과적인 전투를 위해 설계되었다.  그러나 높은 건조 비용과 새로운 중순양함에 대한 수요 부족으로 결국 취소되었다."
  ENG_battle_cruiser_1:0 "리나운급"
  ENG_battle_cruiser_1_desc:0 "리나운급 순양전함은 본래 리벤지급 전함의 개량형으로 설계된 함선이다.  리나운급의 건조는 제1차 세계대전의 발발로 연기되었었다. 피셔 제독은 이 배들을 순양전함으로 건조를 다시 시작하도록 하였다. 이 함선은 전형적인 순양전함으로 훌륭한 무장과 속도, 조타성을 가졌으나 얇은 장갑과 짧은 작전 반경을 가지고 있었다. 원래 계획된 3척 중 리펄스 및 리나운 등 2척만이 완성되었다."
- ENG_battle_cruiser_2:0 "프린세스 로얄급"
- ENG_battle_cruiser_2_desc:0 "프린세스 로얄급 순양전함은 킹 조지 5세급 전함의 속도증가와 저렴한 생산가 버젼의 함선이다. 이 함선은 원형과 유사하지만 수상전투 및 대공전투를 위해 무장(2개의 14인치 3연장포, 6개의 쌍열 5.25인치 대공포)을 감소하였다. 이 함선의 빠른 속도와 넓은 작전 반경은 영국 해군에 신속 타격 능력과 콘보이 호위 능력을 주었지만 제한된 장갑은 현대화된 전함과의 전투에서 문제가 될 가능성이 컸다."
+ ENG_battle_cruiser_2:0 "프린세스 로열급"
+ ENG_battle_cruiser_2_desc:0 "프린세스 로열은 킹 조지 5세급 전함보다 더 빠르고 저렴한 가상의 순양전함급이었습니다. 이 함선은 수상전과 대공전 양면에서 원형과 비슷하지만 14인치 3연장 함포 2문과 5.25인치 2연장 대공포 6문이라는 감소한 무장을 갖추었습니다. 함선의 빠른 속도와 긴 항속거리는 영국 해군에 신속한 공격 능력과 수송선 보호를 제공하였겠지만, 현대식 전함과 싸워야 한다면 제한된 장갑이 문제를 드러낼 수 있었습니다."
  ENG_battleship_1:1 "리벤지급"
  ENG_battleship_1_desc:1 "리벤지급 전함은 빠른 드레드노트형 퀸 엘리자베스급의 저렴한 버전으로 1913년 발주되었습니다. 비슷한 무장과 장갑을 한 배들은 상당히 늦은 속도로 2차 세계 대전 동안 2차 임무를 수행했습니다. 계획된 8척의 선박 중 5척만 건조되었습니다."
  ENG_battleship_2:0 "킹 조지 5세급"
@@ -174,7 +174,7 @@
  ENG_carrier_1:0 "커레이저스급"
  ENG_carrier_1_desc:0 "순양전함을 개장해서 만들어진 이 세 항공모함은 영국 왕립 해군의 첫번째 항공모함 함대가 되었습니다. 1922년의 워싱턴 해군 군축 조약의 체결으로 이들의 개장이 결정되었고 1925년 작업이 완료되었습니다. 이들의 장갑 방호 수준은 평범했지만 긴 사거리의 훌륭한 무장과 빠른 속력을 보유하고 있었습니다.  비록 순양전함의 개장을 통해 만들어진 항모의 한계로 항공기 운용 능력은 떨어지는 편이었지만, 왕립 해군은 이들의 건조를 통해 항공모함 건조 노하우와 해군 항공대 투사 경험을 얻을 수 있었습니다."
  ENG_carrier_2:0 "아크 로열급"
- ENG_carrier_2_desc:0 "아크 로얄급 항공모함은 워싱턴 해군 군축 조약의 제한에 맞추어 만들어진 첫번째 함선입니다.  또한 항공기 격납고와 비행갑판을 선체와 일체화한 첫 번째 함선이기도 합니다. 1934년 설계된 이 함선은 운용하는 다수의 항공기를 제외하고도 훌륭한 장갑과 무장을 가지고 있었고,  영국 왕립 해군의 주요 함선들과의 연계에 부족함 없는 작전 행동 반경과 속력을 보유하고 있었습니다."
+ ENG_carrier_2_desc:0 "항공모함 아크 로열은 워싱턴 해군 군축조약의 제한에 맞추어 건조된 첫 번째 함선이었습니다. 격납고와 비행갑판이 선체에 통합된 첫 번째 함선이기도 합니다. 1934년에 설계된 이 함선은 장갑과 무장을 잘 갖추었습니다. 함선은 많은 수의 항공기를 수용하였고 영국 왕립해군의 주요 함선들을 따라가도록 충분한 작전 거리와 속도를 가졌습니다."
  ENG_carrier_3:0 "일러스트리어스급"
  ENG_carrier_3_desc:0 "일러스트리어스급 항공모함은 1936년의 2차 런던 해군 조약에서 항공모함의 최대배수량을 23,000톤으로 하는 제한 속에서 설계되었습니다. 이 항공모함은 비행갑판에 장갑을 씌운 최초의 영국 항공모함이었으며, 그로 인해 운용 가능한 항공기 수는 줄어들게 되었습니다. 중장갑과 대공 무장들은 든든하게 함선을 보호해주었고 강력한 엔진과 커다란 연료 탱크는 긴 작전 거리를 부여했습니다."
  ENG_carrier_4:0 "임플래커블급"
@@ -619,8 +619,8 @@
  AST_heavy_cruiser_4_desc:0 "이 함선은 독일 도이칠란트급 대구경함포 순양함에 대항하기 위해 제2차 세계대전 초기에, 해군 장관 윈스턴 처칠경에 의해 제안되었습니다. 이 함선은 9.2인치 주포, 강력한 대공화기, 강력한 장갑을 장비하고 있었습니다. 효과적으로 적의 주력함에 대응하기 위해 설계되었습니다. 하지만 결국은, 높은 비용과 중순양함의 수요 부족으로 인해 건조가 취소되었습니다."
  AST_battle_cruiser_1:0 "리나운급"
  AST_battle_cruiser_1_desc:0 "리나운급 순양전함은 원래 리벤지급 전함의 개량형으로 착공된 함선 이었습니다. 그러나 건조는 제1차 세계대전의 발발로 중단 되었습니다. 이후 제독 피셔경이 순양 전함으로 건조를 재개 했습니다. 전형적인 순양전함으로 충분한 무장, 빠른 기동성을 제공했지만, 얇은 장갑과 좁은 작전 행동범위를 가졌습니다. 원래 3척 중 리펄스와 리나운 2척만 건조를 완료했습니다."
- AST_battle_cruiser_2:0 "프린세스 로얄급"
- AST_battle_cruiser_2_desc:0 "프린세스 로얄은 가상의 순양전함급이며, 킹 조지 V 급 전함의 빠르고 값싼 버전입니다. 유사한 화력을 탑재하고 있지만 대함과 대공 두개 모두에 대해 그 수는 감소되어었습니다. 14인치의 3연장 주포 2문,  5.25인치 대공포 6문을 탑재하고 있습니다. 빠르고 긴 항속거리는 영국 해군에게 빠른 타격과 수송선단 보호 능력을 제공하지만, 제한된 장갑은 최신의 전함과 전투를 한다면 문제가 될 것입니다."
+ AST_battle_cruiser_2:0 "프린세스 로열급"
+ AST_battle_cruiser_2_desc:0 "프린세스 로열은 킹 조지 5세급 전함보다 더 빠르고 저렴한 가상의 순양전함급이었습니다. 이 함선은 수상전과 대공전 양면에서 원형과 비슷하지만 14인치 3연장 함포 2문과 5.25인치 2연장 대공포 6문이라는 감소한 무장을 갖추었습니다. 함선의 빠른 속도와 긴 항속거리는 영국 해군에 신속한 공격 능력과 수송선 보호를 제공하였겠지만, 현대식 전함과 싸워야 한다면 제한된 장갑이 문제를 드러낼 수 있었습니다."
  AST_battleship_1:1 "리벤지급"
  AST_battleship_1_desc:1 "리벤지급 전함은 빠른 드레드노트형 퀸 엘리자베스급의 저렴한 버전으로 1913년 발주되었습니다. 비슷한 무장과 장갑을 한 배들은 상당히 늦은 속도로 2차 세계 대전 동안 2차 임무를 수행했습니다. 계획된 8척의 선박 중 5척만 건조되었습니다."
  AST_battleship_2:0 "킹 조지 5세급"
@@ -635,8 +635,8 @@
  AST_SH_battleship_2_desc:0 "라이온 II급 전함은 이전의 라이온급 전함의 개량된 버전으로 1944년에 설계되었습니다. 전쟁중 경험을 토대로 장대하고 더 육중한 디자인이 완성 된 경우 최신형 16인치 3연장 주포 3문 또는 4문을 탑재하도록 했습니다. 두꺼운 장갑은 모든 방향에서 공격과 공습하는 적으로부터 지켜줍니다. 하지만 건조드는 비용, 적의 해군의 상실, 항공 모함의 필요성에 따라 이 프로젝트는 포기되었습니다."
  AST_carrier_1:0 "커레이져스급"
  AST_carrier_1_desc:0 "순양전함을 개장해서 만들어진 이 세 항공모함은 영국 왕립 해군의 첫번째 항공모함 함대가 되었습니다. 1922년의 워싱턴 해군 군축 조약의 체결으로 이들의 개장이 결정되었고 1925년 작업이 완료되었습니다. 이들의 장갑 방호 수준은 평범했지만 긴 사거리의 훌륭한 무장과 빠른 속력을 보유하고 있었습니다.  비록 순양전함의 개장을 통해 만들어진 항모의 한계로 항공기 운용 능력은 떨어지는 편이었지만, 왕립 해군은 이들의 건조를 통해 항공모함 건조 노하우와 해군 항공대 투사 경험을 얻을 수 있었습니다."
- AST_carrier_2:0 "아크로얄급"
- AST_carrier_2_desc:0 "아크로얄급 항공모함은 워싱턴 해군 군축 조약의 제한에 맞게 건조된 최초의 함선입니다. 아크로얄급은 격납고와 비행갑판이 선체의 한 부분으로 통합된 최초의 함선입니다. 1934년에 설계되었으며 장갑과 무장이 잘 되어 있습니다. 영국 해군의 주력 함대를 유지하기 위해 많은 함재기를 탑재하고, 충분한 작전 행동범위와 속도를 가졌습니다."
+ AST_carrier_2:0 "아크 로열급"
+ AST_carrier_2_desc:0 "항공모함 아크 로열은 워싱턴 해군 군축조약의 제한에 맞추어 건조된 첫 번째 함선이었습니다. 격납고와 비행갑판이 선체에 통합된 첫 번째 함선이기도 합니다. 1934년에 설계된 이 함선은 장갑과 무장을 잘 갖추었습니다. 함선은 많은 수의 항공기를 수용하였고 영국 왕립해군의 주요 함선들을 따라가도록 충분한 작전 거리와 속도를 가졌습니다."
  AST_carrier_3:0 "일러스트리어스 급"
  AST_carrier_3_desc:0 "일러스트리어스급 항공모함은 1936년의 2차 런던 해군 조약에서 항공모함의 최대배수량을 23,000톤으로 하는 제한 속에서 설계되었습니다. 이 항공모함은 비행갑판에 장갑을 씌운 최초의 영국 항공모함이었으며, 그로 인해 운용 가능한 항공기 수는 줄어들게 되었습니다. 중장갑과 대공 무장들은 든든하게 함선을 보호해주었고 강력한 엔진과 커다란 연료 탱크는 긴 작전 거리를 부여했습니다."
  AST_carrier_4:0 "임플래커블급"
@@ -691,8 +691,8 @@
  CAN_heavy_cruiser_4_desc:0 "이 함선은 독일 도이칠란트급 중순양함에 대항하기 위해 제2차 세계 대전 초기에 해군 장관 윈스턴 처칠경에 의해 제안되었습니다. 이 함은 9.2 인치 포 강력한 대공병기와 강력한 장갑을 장비하고있었습니다. 이 함들은 효과적으로 적의 주력함에 대처하기 위해 설계되었습니다. 마지막으로, 비용문제와 순양함의 수요 부족으로 인해 건조가 취소되었습니다."
  CAN_battle_cruiser_1:0 "리나운급"
  CAN_battle_cruiser_1_desc:0 "리나운급 순양전함은 원래 리벤지급 전함의 개량형으로 착공된 함선 이었습니다. 그러나 건조는 제1차 세계대전의 발발로 중단 되었습니다. 이후 제독 피셔경이 순양 전함으로 건조를 재개 했습니다. 전형적인 순양전함으로 충분한 무장, 빠른 기동성을 제공했지만, 얇은 장갑과 좁은 작전 행동범위를 가졌습니다. 원래 3척 중 리펄스와 리나운 2척만 건조를 완료했습니다."
- CAN_battle_cruiser_2:0 "프린세스 로얄급"
- CAN_battle_cruiser_2_desc:0 "프린세스 로얄급은 킹 조지 5세 급보다 건조비용이 싸면서도 빠른 항해가 가능한 버젼의 전투순양함이다. 해상과 대 공중전투를 위해 비슷한 구성이지만 감소된 두개의 3연장 13인치 함포와 2연장 5.25인치 대공포를 장비했다. 프린세스 로얄급의 빠른 항속과 긴 작전 반경은 영국 해군에 신속한 공습과, 수송선 호송 역량을 제공했을 것이지만, 만약 현대적인 전함과 싸워야 했다면 제한된 장갑이 문제점을 드러냈을 것입니다."
+ CAN_battle_cruiser_2:0 "프린세스 로열급"
+ CAN_battle_cruiser_2_desc:0 "프린세스 로열은 킹 조지 5세급 전함보다 더 빠르고 저렴한 가상의 순양전함급이었습니다. 이 함선은 수상전과 대공전 양면에서 원형과 비슷하지만 14인치 3연장 함포 2문과 5.25인치 2연장 대공포 6문이라는 감소한 무장을 갖추었습니다. 함선의 빠른 속도와 긴 항속거리는 영국 해군에 신속한 공격 능력과 수송선 보호를 제공하였겠지만, 현대식 전함과 싸워야 한다면 제한된 장갑이 문제를 드러낼 수 있었습니다."
  CAN_battleship_1:1 "리벤지급"
  CAN_battleship_1_desc:1 "리벤지급 전함은 빠른 드레드노트형 퀸 엘리자베스급의 저렴한 버전으로 1913년 발주되었습니다. 비슷한 무장과 장갑을 한 배들은 상당히 늦은 속도로 2차 세계 대전 동안 2차 임무를 수행했습니다. 계획된 8척의 선박 중 5척만 건조되었습니다."
  CAN_battleship_2:0 "킹 조지 5세급"
@@ -707,8 +707,8 @@
  CAN_SH_battleship_2_desc:0 "라이온 II급 전함은 이전의 라이온급 전함의 개량된 버전으로 1944년에 설계되었습니다. 전쟁중 경험을 토대로 장대하고 더 육중한 디자인이 완성 된 경우 최신형 16인치 3연장 주포 3문 또는 4문을 탑재하도록 했습니다. 두꺼운 장갑은 모든 방향에서 공격과 공습하는 적으로부터 지켜줍니다. 하지만 건조드는 비용, 적의 해군의 상실, 항공 모함의 필요성에 따라 이 프로젝트는 포기되었습니다."
  CAN_carrier_1:0 "커레이져스급"
  CAN_carrier_1_desc:0 "순양전함을 개장해서 만들어진 이 세 항공모함은 영국 왕립 해군의 첫번째 항공모함 함대가 되었습니다. 1922년의 워싱턴 해군 군축 조약의 체결으로 이들의 개장이 결정되었고 1925년 작업이 완료되었습니다. 이들의 장갑 방호 수준은 평범했지만 긴 사거리의 훌륭한 무장과 빠른 속력을 보유하고 있었습니다.  비록 순양전함의 개장을 통해 만들어진 항모의 한계로 항공기 운용 능력은 떨어지는 편이었지만, 왕립 해군은 이들의 건조를 통해 항공모함 건조 노하우와 해군 항공대 투사 경험을 얻을 수 있었습니다."
- CAN_carrier_2:0 "아크로얄급"
- CAN_carrier_2_desc:0 "아크로얄급 항공모함은 워싱턴 해군 군축 조약의 제한에 맞게 건조되었습니다. 격납고와 비행 갑판이 선체의 한 부분으로 통합된 최초의 함선입니다. 1934년에 설계되었으며 장갑과 무장이 잘 되어 있습니다. 영국 해군의 주력 함대를 유지하기 위해 많은 함재기를 탑재 하고, 충분한 작전 행동범위와 속도를 가졌습니다 ."
+ CAN_carrier_2:0 "아크 로열급"
+ CAN_carrier_2_desc:0 "항공모함 아크 로열은 워싱턴 해군 군축조약의 제한에 맞추어 건조된 첫 번째 함선이었습니다. 격납고와 비행갑판이 선체에 통합된 첫 번째 함선이기도 합니다. 1934년에 설계된 이 함선은 장갑과 무장을 잘 갖추었습니다. 함선은 많은 수의 항공기를 수용하였고 영국 왕립해군의 주요 함선들을 따라가도록 충분한 작전 거리와 속도를 가졌습니다."
  CAN_carrier_3:0 "일러스트리어스급"
  CAN_carrier_3_desc:0 "일러스트리어스급 항공모함은 1936년의 2차 런던 해군 조약에서 항공모함의 최대배수량을 23,000톤으로 하는 제한 속에서 설계되었습니다. 이 항공모함은 비행갑판에 장갑을 씌운 최초의 영국 항공모함이었으며, 그로 인해 운용 가능한 항공기 수는 줄어들게 되었습니다. 중장갑과 대공 무장들은 든든하게 함선을 보호해주었고 강력한 엔진과 커다란 연료 탱크는 긴 작전 거리를 부여했습니다."
  CAN_carrier_4:0 "임플래커블급"
@@ -844,8 +844,8 @@
  NZL_heavy_cruiser_4_desc:0 "이 함선은 독일 도이칠란트급 중순양함에 대항하기 위해 제2차 세계 대전 초기에 해군 장관 윈스턴 처칠경에 의해 제안되었습니다. 이 함은 9.2 인치 포 강력한 대공병기와 강력한 장갑을 장비하고있었습니다. 이 함들은 효과적으로 적의 주력함에 대처하기 위해 설계되었습니다. 마지막으로, 비용문제와 순양함의 수요 부족으로 인해 건조가 취소되었습니다."
  NZL_battle_cruiser_1:0 "리나운 급"
  NZL_battle_cruiser_1_desc:0 "리나운 급은 원래 리벤지급 전함의 개량된 버젼으로서 그 역할을 대체하기 위한 전투순양함이었다. 제1차 세계대전 발발로 건조가 중단되었지만, 피셔 제독이 전투순양함으로서 재건조 하도록 지시했다. 그것들은 충분히 무장했고, 빠르고, 쉬운 항행이 가능했으나, 상대적으로 얇은 장갑과 짧은 작전범위를 가진 본질적인 의미의 전투순양함 이었다. 세척의 계획 중에 리펄스와 리나운 두척 만이 건조되었다."
- NZL_battle_cruiser_2:0 "프린세스 로얄급"
- NZL_battle_cruiser_2_desc:0 "프린세스 로얄급은 킹 조지 5세 급보다 건조비용이 싸면서도 빠른 항해가 가능한 버젼의 전투순양함이다. 해상과 대 공중전투를 위해 비슷한 구성이지만 감소된 두개의 3연장 13인치 함포와 2연장 5.25인치 대공포를 장비했다. 프린세스 로얄급의 빠른 항속과 긴 작전 반경은 영국 해군에 신속한 공습과, 수송선 호송 역량을 제공했을 것이지만, 만약 현대적인 전함과 싸워야 했다면 제한된 장갑이 문제점을 드러냈을 것입니다."
+ NZL_battle_cruiser_2:0 "프린세스 로열급"
+ NZL_battle_cruiser_2_desc:0 "프린세스 로열은 킹 조지 5세급 전함보다 더 빠르고 저렴한 가상의 순양전함급이었습니다. 이 함선은 수상전과 대공전 양면에서 원형과 비슷하지만 14인치 3연장 함포 2문과 5.25인치 2연장 대공포 6문이라는 감소한 무장을 갖추었습니다. 함선의 빠른 속도와 긴 항속거리는 영국 해군에 신속한 공격 능력과 수송선 보호를 제공하였겠지만, 현대식 전함과 싸워야 한다면 제한된 장갑이 문제를 드러낼 수 있었습니다."
  NZL_battleship_1:1 "리벤지급"
  NZL_battleship_1_desc:1 "리벤지급 전함은 빠른 드레드노트형 퀸 엘리자베스급의 저렴한 버전으로 1913년 발주되었습니다. 비슷한 무장과 장갑을 한 배들은 상당히 늦은 속도로 2차 세계 대전 동안 2차 임무를 수행했습니다. 계획된 8척의 선박 중 5척만 건조되었습니다."
  NZL_battleship_2:0 "킹 조지5세급"
@@ -860,8 +860,8 @@
  NZL_SH_battleship_2_desc:0 "라이온 II급 전함은 이전 라이온 급 전함의 개량된 버전으로서 1944년 설계되었다. 대전 중의 전훈에 따라, 가능한 최대로 셋 또는 네개의 3연장 16인치 함포를 탑재하려고 했다. 수상이나 공중의 어떠한 적이 공습하더라도 두꺼운 장갑 판금을 통해 함체를 보호하려고 했다. 함선을 건조하기 위한 막대한 비용과, 적대 해군의 패배, 그리고 항공모함의 우선적인 필요성에 따라 프로젝트가 폐기되었다."
  NZL_carrier_1:0 "커리지어스급"
  NZL_carrier_1_desc:0 "전투 순양함으로 부터 전환 개장된 세척의 커리지어스 급 항모는 대영 제국 왕립 해군의 첫 항공모함이었다. 그것들의 개조는 1922년 워싱턴 해군 조약에 따른 것이었고, 작업은 1925년에 마무리되었다. 넓은 작전반경과 좋은 항속을 지닌 대신, 적절하기는 했어도 좋은 장갑은 갖추지 못했다. 그리고 적재 가능한 함재기 숫자에 제한이 있었는데 이는 커리지어스 급 항모가 (본래 목적이 아닌) 다른 함체로부터 개장된 탓이었다. 그렇기는 하지만, 커리지어스급 항모는 영국 해군에게 항공모함 건조와 함재기 운용에 있어서 귀중한 경험을 쌓게 해주었다."
- NZL_carrier_2:0 "아크 로얄급"
- NZL_carrier_2_desc:0 "아크 로얄급 항공모함은 워싱턴 해군 조약의 제한 사항을 준수하는 첫 항공모함이었다. 아크 로얄급은 비행갑판과 함재기 격납고를 제대로 갖춘 첫 항모이기도 했다. 1934년에 설계되었으며, 함체는 훌륭히 장갑화되었고, 무장했다. 영국 해군의 주력 함대에 뒤지지 않는 항해 속도와, 작전반경을 충족했으며 많은 수의 함재기를 갖췄다."
+ NZL_carrier_2:0 "아크 로열급"
+ NZL_carrier_2_desc:0 "항공모함 아크 로열은 워싱턴 해군 군축조약의 제한에 맞추어 건조된 첫 번째 함선이었습니다. 격납고와 비행갑판이 선체에 통합된 첫 번째 함선이기도 합니다. 1934년에 설계된 이 함선은 장갑과 무장을 잘 갖추었습니다. 함선은 많은 수의 항공기를 수용하였고 영국 왕립해군의 주요 함선들을 따라가도록 충분한 작전 거리와 속도를 가졌습니다."
  NZL_carrier_3:0 "일러스트리어스급"
  NZL_carrier_3_desc:0 "일러스트리어스급 항공모함은 1936년의 2차 런던 해군 조약에서 항공모함의 최대배수량을 23,000톤으로 하는 제한 속에서 설계되었습니다. 이 항공모함은 비행갑판에 장갑을 씌운 최초의 영국 항공모함이었으며, 그로 인해 운용 가능한 항공기 수는 줄어들게 되었습니다. 중장갑과 대공 무장들은 든든하게 함선을 보호해주었고 강력한 엔진과 커다란 연료 탱크는 긴 작전 거리를 부여했습니다."
  NZL_carrier_4:0 "임플래커블 급"
@@ -915,8 +915,8 @@
  RAJ_heavy_cruiser_4_desc:0 "이 함선은 독일 도이칠란트급 중순양함에 대항하기 위해 제2차 세계 대전 초기에 해군 장관 윈스턴 처칠경에 의해 제안되었습니다. 이 함은 9.2 인치 포 강력한 대공병기와 강력한 장갑을 장비하고있었습니다. 이 함들은 효과적으로 적의 주력함에 대처하기 위해 설계되었습니다. 마지막으로, 비용문제와 순양함의 수요 부족으로 인해 건조가 취소되었습니다."
  RAJ_battle_cruiser_1:0 "리나운급"
  RAJ_battle_cruiser_1_desc:0 "리나운 급은 원래 리벤지급 전함의 개량된 버젼으로서 그 역할을 대체하기 위한 전투순양함이었다. 제1차 세계대전 발발로 건조가 중단되었지만, 피셔 제독이 전투순양함으로서 재건조 하도록 지시했다. 그것들은 충분히 무장했고, 빠르고, 쉬운 항행이 가능했으나, 상대적으로 얇은 장갑과 짧은 작전범위를 가진 본질적인 의미의 전투순양함 이었다. 세척의 계획 중에 리펄스와 리나운 두척 만이 건조되었다."
- RAJ_battle_cruiser_2:0 "프린세스 로얄급"
- RAJ_battle_cruiser_2_desc:0 "프린세스 로얄급은 킹 조지 5세 급보다 건조비용이 싸면서도 빠른 항해가 가능한 버젼의 전투순양함이다. 해상과 대 공중전투를 위해 비슷한 구성이지만 감소된 두개의 3연장 13인치 함포와 2연장 5.25인치 대공포를 장비했다. 프린세스 로얄급의 빠른 항속과 긴 작전 반경은 영국 해군에 신속한 공습과, 수송선 호송 역량을 제공했을 것이지만, 만약 현대적인 전함과 싸워야 했다면 제한된 장갑이 문제점을 드러냈을 것입니다."
+ RAJ_battle_cruiser_2:0 "프린세스 로열급"
+ RAJ_battle_cruiser_2_desc:0 "프린세스 로열은 킹 조지 5세급 전함보다 더 빠르고 저렴한 가상의 순양전함급이었습니다. 이 함선은 수상전과 대공전 양면에서 원형과 비슷하지만 14인치 3연장 함포 2문과 5.25인치 2연장 대공포 6문이라는 감소한 무장을 갖추었습니다. 함선의 빠른 속도와 긴 항속거리는 영국 해군에 신속한 공격 능력과 수송선 보호를 제공하였겠지만, 현대식 전함과 싸워야 한다면 제한된 장갑이 문제를 드러낼 수 있었습니다."
  RAJ_battleship_1:1 "리벤지급"
  RAJ_battleship_1_desc:1 "리벤지급 전함은 빠른 드레드노트형 퀸 엘리자베스급의 저렴한 버전으로 1913년 발주되었습니다. 비슷한 무장과 장갑을 한 배들은 상당히 늦은 속도로 2차 세계 대전 동안 2차 임무를 수행했습니다. 계획된 8척의 선박 중 5척만 건조되었습니다."
  RAJ_battleship_2:0 "킹 조지5세급"
@@ -931,8 +931,8 @@
  RAJ_SH_battleship_2_desc:0 "라이온 II급 전함은 이전의 라이온급 전함의 개량된 버전으로 1944년에 설계되었습니다. 전쟁중 경험을 토대로 장대하고 더 육중한 디자인이 완성 된 경우 최신형 16인치 3연장 주포 3문 또는 4문을 탑재하도록 했습니다. 두꺼운 장갑은 모든 방향에서 공격과 공습하는 적으로부터 지켜줍니다. 하지만 건조드는 비용, 적의 해군의 상실, 항공 모함의 필요성에 따라 이 프로젝트는 포기되었습니다."
  RAJ_carrier_1:0 "커레이져스급"
  RAJ_carrier_1_desc:0 "순양전함을 개장해서 만들어진 이 세 항공모함은 영국 왕립 해군의 첫번째 항공모함 함대가 되었습니다. 1922년의 워싱턴 해군 군축 조약의 체결으로 이들의 개장이 결정되었고 1925년 작업이 완료되었습니다. 이들의 장갑 방호 수준은 평범했지만 긴 사거리의 훌륭한 무장과 빠른 속력을 보유하고 있었습니다.  비록 순양전함의 개장을 통해 만들어진 항모의 한계로 항공기 운용 능력은 떨어지는 편이었지만, 왕립 해군은 이들의 건조를 통해 항공모함 건조 노하우와 해군 항공대 투사 경험을 얻을 수 있었습니다."
- RAJ_carrier_2:0 "아크 로얄급"
- RAJ_carrier_2_desc:0 "아크 로얄급 항공모함은 워싱턴 해군 군축 조약의 제한에 맞게 건조되었습니다. 격납고와 비행 갑판이 선체의 한 부분으로 통합된 최초의 함선입니다. 1934년에 설계되었으며 장갑과 무장이 잘 되어 있습니다. 영국 해군의 주력 함대를 유지하기 위해 많은 함재기를 탑재 하고, 충분한 작전 행동범위와 속도를 가졌습니다 ."
+ RAJ_carrier_2:0 "아크 로열급"
+ RAJ_carrier_2_desc:0 "항공모함 아크 로열은 워싱턴 해군 군축조약의 제한에 맞추어 건조된 첫 번째 함선이었습니다. 격납고와 비행갑판이 선체에 통합된 첫 번째 함선이기도 합니다. 1934년에 설계된 이 함선은 장갑과 무장을 잘 갖추었습니다. 함선은 많은 수의 항공기를 수용하였고 영국 왕립해군의 주요 함선들을 따라가도록 충분한 작전 거리와 속도를 가졌습니다."
  RAJ_carrier_3:0 "일러스트리어스급"
  RAJ_carrier_3_desc:0 "일러스트리어스급 항공모함은 1936년의 2차 런던 해군 조약에서 항공모함의 최대배수량을 23,000톤으로 하는 제한 속에서 설계되었습니다. 이 항공모함은 비행갑판에 장갑을 씌운 최초의 영국 항공모함이었으며, 그로 인해 운용 가능한 항공기 수는 줄어들게 되었습니다. 중장갑과 대공 무장들은 든든하게 함선을 보호해주었고 강력한 엔진과 커다란 연료 탱크는 긴 작전 거리를 부여했습니다."
  RAJ_carrier_4:0 "임플래커블급"
@@ -977,8 +977,8 @@
  SAF_heavy_cruiser_4_desc:0 "이 함선은 독일 도이칠란트급 중순양함에 대항하기 위해 제2차 세계 대전 초기에 해군 장관 윈스턴 처칠경에 의해 제안되었습니다. 이 함은 9.2 인치 포 강력한 대공병기와 강력한 장갑을 장비하고있었습니다. 이 함들은 효과적으로 적의 주력함에 대처하기 위해 설계되었습니다. 마지막으로, 비용문제와 순양함의 수요 부족으로 인해 건조가 취소되었습니다."
  SAF_battle_cruiser_1:0 "리나운급"
  SAF_battle_cruiser_1_desc:0 "리나운급 순양전함은 원래 리벤지급 전함의 개량형으로 착공된 함선 이었습니다. 그러나 건조는 제1차 세계대전의 발발로 중단 되었습니다. 이후 제독 피셔경이 순양 전함으로 건조를 재개 했습니다. 전형적인 순양전함으로 충분한 무장, 빠른 기동성을 제공했지만, 얇은 장갑과 좁은 작전 행동범위를 가졌습니다. 원래 3척 중 리펄스와 리나운 2척만 건조를 완료했습니다."
- SAF_battle_cruiser_2:0 "프린세스 로얄급"
- SAF_battle_cruiser_2_desc:0 "프린세스 로얄급은 킹 조지 5세 급보다 건조비용이 싸면서도 빠른 항해가 가능한 버젼의 전투순양함이다. 해상과 대 공중전투를 위해 비슷한 구성이지만 감소된 두개의 3연장 13인치 함포와 2연장 5.25인치 대공포를 장비했다. 프린세스 로얄급의 빠른 항속과 긴 작전 반경은 영국 해군에 신속한 공습과, 수송선 호송 역량을 제공했을 것이지만, 만약 현대적인 전함과 싸워야 했다면 제한된 장갑이 문제점을 드러냈을 것입니다."
+ SAF_battle_cruiser_2:0 "프린세스 로열급"
+ SAF_battle_cruiser_2_desc:0 "프린세스 로열은 킹 조지 5세급 전함보다 더 빠르고 저렴한 가상의 순양전함급이었습니다. 이 함선은 수상전과 대공전 양면에서 원형과 비슷하지만 14인치 3연장 함포 2문과 5.25인치 2연장 대공포 6문이라는 감소한 무장을 갖추었습니다. 함선의 빠른 속도와 긴 항속거리는 영국 해군에 신속한 공격 능력과 수송선 보호를 제공하였겠지만, 현대식 전함과 싸워야 한다면 제한된 장갑이 문제를 드러낼 수 있었습니다."
  SAF_battleship_1:1 "리벤지급"
  SAF_battleship_1_desc:1 "리벤지급 전함은 빠른 드레드노트형 퀸 엘리자베스급의 저렴한 버전으로 1913년 발주되었습니다. 비슷한 무장과 장갑을 한 배들은 상당히 늦은 속도로 2차 세계 대전 동안 2차 임무를 수행했습니다. 계획된 8척의 선박 중 5척만 건조되었습니다."
  SAF_battleship_2:0 "킹 조지 5세급"
@@ -993,8 +993,8 @@
  SAF_SH_battleship_2_desc:0 "라이온 II급 전함은 이전의 라이온급 전함의 개량된 버전으로 1944년에 설계되었습니다. 전쟁중 경험을 토대로 장대하고 더 육중한 디자인이 완성 된 경우 최신형 16인치 3연장 주포 3문 또는 4문을 탑재하도록 했습니다. 두꺼운 장갑은 모든 방향에서 공격과 공습하는 적으로부터 지켜줍니다. 하지만 건조드는 비용, 적의 해군의 상실, 항공 모함의 필요성에 따라 이 프로젝트는 포기되었습니다."
  SAF_carrier_1:0 "커레이져스급"
  SAF_carrier_1_desc:0 "순양전함을 개장해서 만들어진 이 세 항공모함은 영국 왕립 해군의 첫번째 항공모함 함대가 되었습니다. 1922년의 워싱턴 해군 군축 조약의 체결으로 이들의 개장이 결정되었고 1925년 작업이 완료되었습니다. 이들의 장갑 방호 수준은 평범했지만 긴 사거리의 훌륭한 무장과 빠른 속력을 보유하고 있었습니다.  비록 순양전함의 개장을 통해 만들어진 항모의 한계로 항공기 운용 능력은 떨어지는 편이었지만, 왕립 해군은 이들의 건조를 통해 항공모함 건조 노하우와 해군 항공대 투사 경험을 얻을 수 있었습니다."
- SAF_carrier_2:0 "아크로얄급"
- SAF_carrier_2_desc:0 "아크로얄급 항공모함은 워싱턴 해군 군축 조약의 제한에 맞게 건조되었습니다. 격납고와 비행 갑판이 선체의 한 부분으로 통합된 최초의 함선입니다. 1934년에 설계되었으며 장갑과 무장이 잘 되어 있습니다. 영국 해군의 주력 함대를 유지하기 위해 많은 함재기를 탑재 하고, 충분한 작전 행동범위와 속도를 가졌습니다 ."
+ SAF_carrier_2:0 "아크 로열급"
+ SAF_carrier_2_desc:0 "항공모함 아크 로열은 워싱턴 해군 군축조약의 제한에 맞추어 건조된 첫 번째 함선이었습니다. 격납고와 비행갑판이 선체에 통합된 첫 번째 함선이기도 합니다. 1934년에 설계된 이 함선은 장갑과 무장을 잘 갖추었습니다. 함선은 많은 수의 항공기를 수용하였고 영국 왕립해군의 주요 함선들을 따라가도록 충분한 작전 거리와 속도를 가졌습니다."
  SAF_carrier_3:0 "일러스트리어스 급"
  SAF_carrier_3_desc:0 "일러스트리어스급 항공모함은 1936년의 2차 런던 해군 조약에서 항공모함의 최대배수량을 23,000톤으로 하는 제한 속에서 설계되었습니다. 이 항공모함은 비행갑판에 장갑을 씌운 최초의 영국 항공모함이었으며, 그로 인해 운용 가능한 항공기 수는 줄어들게 되었습니다. 중장갑과 대공 무장들은 든든하게 함선을 보호해주었고 강력한 엔진과 커다란 연료 탱크는 긴 작전 거리를 부여했습니다."
  SAF_carrier_4:0 "임플래커블급"
