--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -1074,7 +1074,7 @@
  SER_modern_tank_equipment_1_short:0 "이그맨"
  gw_tank_equipment:0 "대전기 전차"
  gw_tank_equipment_short:0 "대전기 전차"
- gw_tank_equipment_desc:0 "제1차 세계 대전 중 탱크는 영국과 프랑스에서 독립적으로 동시에 개발되었는데, 이는 서부전선에서 참호 교착상태를 타결하기 위한 수단이었습니다. 탱크라는 이름은 본래의 목적을 숨기기 위해 초기 개발단계 중 영국에 의해 붙여진 이름입니다. 초기의 탱크는 기관총과 소구경 화포로 무장했으며, 느리게 기동했고, 소구경 화기 정도만 방어할 수 있을 장갑을 갖추었습니다."
+ gw_tank_equipment_desc:0 "제1차 세계대전 중 전차는 영국과 프랑스에서 독립적으로 동시에 개발되었는데, 이는 서부전선에서 참호전의 교착 상태를 타개하기 위한 수단이었습니다. 탱크라는 이름은 본래의 목적을 숨기려고 초기 개발 단계 중 영국이 붙인 이름입니다. 초기 전차는 기관총과 소구경 화포로 무장하였으며, 느리게 기동하였고, 소구경 화기 정도만 방어할 수 있는 장갑을 갖추었습니다."
  BAV_gw_tank_equipment:0 "마크 IV 노획전차"
  BAV_gw_tank_equipment_short:0 "마크 IV"
  BAV_gw_tank_equipment_desc:0 ""
@@ -1806,11 +1806,11 @@
  JAP_anti_tank_equipment_1:0 "37mm 94형"
  JAP_anti_tank_equipment_1_short:0 "94식"
  JAP_anti_tank_equipment_2:0 "47mm 1형"
- JAP_anti_tank_equipment_3:0 "75mm 4형"
+ JAP_anti_tank_equipment_3:0 "4식 75mm"
  HUN_anti_tank_equipment_1:0 "36M 47 mm"
  HUN_anti_tank_equipment_1_short:0 "36M"
  HUN_anti_tank_equipment_2:0 "38M 50 mm"
- HUN_anti_tank_equipment_3:0 "43M 75 mm"
+ HUN_anti_tank_equipment_3:0 "43M 75mm"
  RUS_anti_tank_equipment_1:0 "M 1930 37 mm"
  RUS_anti_tank_equipment_1_short:0 "M1930"
  RUS_anti_tank_equipment_2:0 "M 42 45 mm"
@@ -1971,8 +1971,8 @@
  SAF_artillery_equipment_1_short:0 "QF 18-파운드 포"
  SAF_artillery_equipment_2:0 "QF 25-파운드 포"
  SAF_artillery_equipment_3:0 "BL 5.5-인치 포"
- USA_artillery_equipment_1:0 "75 mm 야포 M1897"
- USA_artillery_equipment_1_short:0 "75 mm 야포 M1897"
+ USA_artillery_equipment_1:0 "M1897 75mm 야포"
+ USA_artillery_equipment_1_short:0 "M1897 75mm 야포"
  USA_artillery_equipment_2:0 "105 mm M101A1"
  USA_artillery_equipment_3:0 "155 mm M114"
  RUS_artillery_equipment_1:0 "M1936 76 mm"
@@ -1984,12 +1984,12 @@
  ITA_artillery_equipment_2:0 "149/40 야포 모델 35"
  ITA_artillery_equipment_2_short:0 "149/40 야포 모델 35"
  ITA_artillery_equipment_3:0 "210/22 야포 모델 35"
- JAP_artillery_equipment_1:0 "95식 75mm 야포"
- JAP_artillery_equipment_1_short:0 "95식 75mm 야포"
+ JAP_artillery_equipment_1:0 "95식 75mm"
+ JAP_artillery_equipment_1_short:0 "95식 75mm"
  JAP_artillery_equipment_2:0 "91식 10cm 야포"
  JAP_artillery_equipment_3:0 "96식 15cm 야포"
  NOR_artillery_equipment_1:0 "M27 75mm 산포"
- NOR_artillery_equipment_1_short:0 "M.27 75 mm"
+ NOR_artillery_equipment_1_short:0 "M.27 75mm"
  NOR_artillery_equipment_2:0 "라인메탈 12 cm leFH 08"
  NOR_artillery_equipment_3:0 "m32 12cm 야포"
  POL_artillery_equipment_1:0 "아르마타 75mm 야포 wz. 31 St."
