--- a/localisation/events_l_english.yml
+++ b/localisation/events_l_english.yml
@@ -479,7 +479,7 @@
  france.20.a:0 "프랑스를 위한 싸움이 계속된다."
  france.20.a_tt:0 "§Y샤를 드골은 프랑스의 지도자가 되었습니다§!"
  france.21.t:0 "파업으로 위협하는 노동자들"
- france.21.d:0 "큰 공장에서 두 노동자를 해고함에 따라, 노동자와 공장주가 전국 각지에서 폭발한 중간에서 투쟁을 하고 있습니다. 노동자들은 [Root.GetCommunistParty]에 의해 뒷받침을 받고 조직화하고. 높은 임금과 짧은 작업 주와 같은 더 나은 조건을 요구하고 있습니다. 이것은 우리 공장의 생산량을 크게 감소시켰고 [Root.GetCommunistParty]의 승리로 보입니다. 우리는 협상을 위해 마티뇽(총리관저)에 초대 받았습니다. 우리는 저들의 요구를 들어주거나 아니면 전국 파업 위험에도 완강히 버티시겠습니까?"
+ france.21.d:0 "큰 공장에서 두 노동자를 해고함에 따라, 노동자들과 공장주들 사이의 투쟁은 전국적으로 일어났습니다. [Root.GetCommunistParty]의 지지를 받는 노동자들은 조직되고, 높은 임금과 짧은 노동시간과 같은 더 나은 조건을 요구하고 있습니다. 이는 우리 공장의 생산량을 많이 감소시켰고 [Root.GetCommunistParty]의 승리로 보입니다. 우리는 협상을 위하여 마티뇽(총리관저)에 초대받았습니다. 우리는 저들의 요구에 굴복하여야 할까요, 아니면 전국 파업 위험에도 완강히 버텨야 할까요?"
  france.21.a:0 "파업하게 두어라"
  france.21.b:0 "거래를 협상한다"
  france.22.t:0 "마티뇽 협정으로의 회귀"
@@ -487,7 +487,7 @@
  france.22.a:0 "시간이 흐르면 이전과 같이 효율적으로 될 것이다."
  france.22.b:0 "그들의 권리를 폐지하고 우리 산업을 궤도에 즉시 올려놔야 한다"
  france.23.t:0 "파업 종료"
- france.23.d:0 "대부분의 노동자들은 그들의 무모한 요구가 받아들여 질 수 없다는 것을 이제 깨달았습니다. 그들의 아이들이 배고파 지고 비록 [Root.GetCommunistParty](이)가 계속 파업을 촉구하더라도, 계속 진행할 자원이 없습니다. 하루가 지날 때마다 노동자들은 지쳐갔고 다시 공장으로 돌아 갔습니다. 언제든지 일어 날 수 있는 파업이 언제 그랬냐는 듯이 우리의 산업은 다시 완전한 능력을 되찾을 것입니다."
+ france.23.d:0 "대부분의 노동자들은 그들의 무모한 요구가 받아들여질 수 없다는 것을 이제 깨달았습니다. 그들의 아이들이 배고파지고 비록 [Root.GetCommunistParty](이)가 계속 파업을 촉구하더라도, 계속 진행할 자원이 없습니다. 하루가 지날 때마다 노동자들은 지쳐서 다시 공장으로 돌아갔습니다. 언제든지 일어날 수 있는 파업이 언제 그랬냐는 듯이 우리의 산업은 다시 완전한 능력을 되찾을 것입니다."
  france.23.a:0 "마침내 우리는 다시 경쟁할 수 있다"
  france.24.t:0 "공산주의의 위협"
  france.24.d:0 "통일 독일과 소련은 무시하기에는 엄청 커다란 위협입니다. 폴란드 분할에 대한 양국의 합의 후 우리는 어려운 선택을 했습니다. 우리가 만약 [Root.GetCommunistParty](을)를 운영하게 두었다면 소련이 힘을 성장하고 우리 자신에게 여태까지 내부항쟁을 열게 했을겁니다. [Root.GetCommunistParty]에 모든 공산주의 활동이나 제휴 관계를 박탈함으로 모든 시민들에게 우리는 평화에 위협이 되는 누구든지 용납 안한다는 강력한 신호를 보낼 수 있습니다.\n\n전통적으로 우리는 정치적 토론에 [Root.GetCommunistParty](을)를 포함 할 수 있으나, 모스크바에 충성을 포기하는 것을 거부함으로 가혹한 조치를 취할 시간이 될 수 있었습니다."
@@ -1047,8 +1047,8 @@
  news.100.a:0 "폴란드는 가망이 없었어."
  news.100.b:0 "조국을 위한 또 하나의 승리군."
  news.100.c:0 "이건 재앙이야!"
- news.103.t:0 "레닌그라드의 함락"
- news.103.d:0 "러시아 혁명의 발상지인 레닌그라드가 진격하는 독일군에 함락되었습니다.\n\n일부 교외에서 산발적 전투가 계속되고 있었지만, 폐허가 된 시가지는 이상한 고요함으로 가득했습니다.\n\n오늘 일찍, 독일군의 행렬은 성 이사삭 대성당으로 행진했고, 성당의 거대한 돔은 독일 공군 폭격기의 공습을 피하기 위해 붉은군대 공병들에 의해 회색으로 도장되어 있었습니다.\n\n이러한 노력에도 불구하고, 성당에는 수많은 총알 구멍과 유탄 자국으로 가득했습니다."
+ news.103.t:0 "상트페테르부르크 함락"
+ news.103.d:0 "러시아 제국의 수도인 상트페테르부르크가 진격하는 독일군에 함락되었습니다.\n\n일부 교외에서 산발적 전투가 계속되고 있었지만, 폐허가 된 시가지는 이상한 고요함으로 가득했습니다.\n\n오늘 일찍, 독일군의 행렬은 성 이사악 성당으로 행진하였고, 성당의 거대한 돔은 독일 공군 폭격기의 공습을 피하고자 러시아군 공병들에 의하여 회색으로 도장되어 있었습니다.\n\n이러한 노력에도 불구하고, 성당에는 수많은 총알 구멍과 유탄 자국으로 가득합니다."
  news.103.c:0 "수비 책임자는 총살될 것이다!"
  news.103.e:0 "붉은 군대에 영광을!"
  news.104.t:0 "키예프 함락"
@@ -1120,7 +1120,7 @@
  news.132.t:0 "로마 함락"
  news.132.d:0 "수비대의 항복을 받아 마침내 연합군이 로마에 입성했습니다. 이 도시는 이제 군사 점령 하에 있습니다. 대부분의 역사적 건조물이 이번 싸움을 극복하고 멀쩡히 남았으며, 적어도 지금은 교황청의 요청을 받아 연합군 부대는 바티칸 시국에 입성하지는 않고 있습니다.\n\n로마의 함락은 이탈리아 전역에서 중요한 승리라고 할 수 있습니다. 무엇보다 사람들은 이것으로 이탈리아 반도를 진격하는 연합군에 대한 조직적인 저항이 끝나는 것을 희망하고 있습니다."
  news.132.b:0 "위대한 승리다!"
- news.133.d:0 "이탈리아 수비대의 잔존 부대가 교외로 사라진 후 프랑스군은 마침내 로마에 입성했습니다. 프랑스군은 중요한 정부 청사를 점령하기 위해 신속하게 행동하고 코르소 거리를 행진하는 군인과 장갑차의 긴 줄이 '개선식'을 거행했습니다.\n\n로마의 함락으로 이탈리아의 전쟁 지속 능력에 의문이 제기되고 있습니다. 외신들은 로마가 함락하기 전에 시내에서 탈출 한 이탈리아 정부가 즉시 항복 협상을 시작할 것이라고 예상하고 있습니다."
+ news.133.d:0 "이탈리아 잔존 수비대가 교외로 사라진 이후 프랑스군은 마침내 로마에 입성하였습니다. 프랑스군은 중요한 정부 청사를 점령하고자 신속하게 행동하였고, 코르소 거리를 행진하는 군인과 장갑차의 긴 행렬로 이루어진 '개선식'이 거행되었습니다.\n\n로마의 함락으로 이탈리아의 전쟁 지속 능력에 의문이 제기되고 있습니다. 외신들은 로마가 함락되기 전에 시내에서 탈출한 이탈리아 정부가 즉시 항복 협상을 시작할 것이라고 예상하고 있습니다."
  news.134.t:0 "파리 해방"
  news.134.d:0 "프랑스의 수도 파리가 독일의 점령에서 해방된 것이 확인되었습니다. 연합군은 파리에 입성하였고 독일군 수비대의 잔존 부대는 항복했습니다. 독일군 저격수가 시내 일부에서 저항을 계속하고 있다는 소문이 있음에도 불구하고, 파리 시민은 샹젤리제 거리를 행진하는 '해방군'에게 성원을 보내고있습니다.\n\n사람들은 독일이 청야전술을 실시해, 파리가 화염에 휩싸이고 폐허가 되는 것을 두려워했지만, 도시는 별다른 피해를 입지 않았습니다. 이제 에펠탑에는 다시 프랑스의 삼색기가 휘날리고 있습니다."
  news.135.t:0 "도쿄 함락"
@@ -3041,7 +3041,7 @@
  canada_vanilla.1.desc:0 "백만 명이 넘는 캐나다 여성들이 제2차 세계 대전 중 노동자로서 종사했습니다. 전국 방송을 통해 회생과 애국의 상징이 된 이들 중 한 사람, 브렌소녀 로니로 잘 알려진 베로니카 포스터입니다. 그녀는 세 형제가 해외에서 싸우고 있을 때 존 잉글리스 앤드 컴퍼니의 토론토 총기 공장에서 일했습니다. 미국의 참전 이후 만들어진, '리벳공 로지'로 유명한 캠페인 방송에서 착안해, 그녀와 같은 여성들이 전쟁 수행에 참가하기를 독려하기 위해서, 그녀에 관한 포스터나 단편영화가 만들어졌습니다."
  canada_vanilla.1.opt:0 "뉴스에서 그러던데, '공장일이 집안일보다 어렵지 않아요'"
  country_capitulated.0.t:0 "[Root.GetName]의 항복"
- country_capitulated.0.d_positive_both_no_faction:1 "\n비열한 [Root.GetAdjective](은)는 전 국토를 유린하는 [From.From.GetAdjective]군의 압도적인 군사력에 더는 저항할 수 없다고 [From.From.GetLeader](이)가 발표하였습니다. [Root.GetAdjective] 정부는 도망치기로 결정했고 망명을 떠났습니다. 그들의 주력군은 항복하였으며, [From.From.GetNameDef](은)는 이제 그들의 본토를 통제하고 있습니다.\n다른 곳에서 전쟁은 계속되고 있지만, 이것은 [From.From.GetNameDef]의 위대한 승리입니다."
+ country_capitulated.0.d_positive_both_no_faction:1 "\n[From.From.GetLeader](이)가 비겁한 [Root.GetAdjective] 측은 전 국토를 유린하는 [From.From.GetAdjective]군의 압도적인 군사력에 더는 저항할 수 없다고 발표하였습니다. [Root.GetAdjective] 정부는 도망치기로 결정하여 망명을 떠났습니다. 그들의 주력군은 항복하였으며, [From.From.GetNameDef] 측이 이제 그들의 본토를 통제하고 있습니다.\n다른 곳에서 전쟁이 계속되고 있지만, 이것은 [From.From.GetNameDef] 측의 위대한 승리입니다."
  country_capitulated.0.d_positive_prev_no_faction:1 "\n비열한 [Root.GetAdjective](은)는 전 국토를 유린하는 [From.From.GetAdjective]군의 압도적인 군사력에 더는 저항할 수 없다고 [From.From.GetLeader](이)가 발표하였습니다. [Root.GetAdjective] 정부는 도망치기로 결정했고 망명을 떠났습니다. 그들의 주력군은 항복하였으며, [From.From.GetNameDef](은)는 이제 그들의 본토를 통제하고 있습니다.\n다른 곳에서 [Root.GetFactionName]의 잔존국들에 대한 전쟁이 계속되고 있지만, 이것은 [From.From.GetNameDef]의 위대한 승리입니다."
  country_capitulated.0.d_positive_prev_faction:1 "\n비열한 [Root.GetAdjective](은)는 전 국토를 유린하는 [From.From.GetAdjective]군의 압도적인 군사력에 더는 저항할 수 없다고 [From.From.GetLeader](이)가 발표하였습니다. [Root.GetAdjective] 정부는 도망치기로 결정했고 망명을 떠났습니다. 그들의 주력군은 항복하였으며, [From.From.GetNameDef](은)는 이제 그들의 본토를 통제하고 있습니다.\n다른 곳에서 [Root.GetFactionName]의 잔존국들에 대한 전쟁이 계속되고 있지만, 이것은 [From.From.GetNameDef]의 위대한 승리입니다."
  country_capitulated.0.d_negative_both_no_faction:1 "\n비열한 [Root.GetAdjective](은)는 전 국토를 유린하는 [From.From.GetAdjective]군의 압도적인 군사력에 더는 저항할 수 없다고 [Root.GetLeader](이)가 발표하였습니다. [Root.GetAdjective] 정부는 도망치기로 결정했고 망명을 떠났습니다. 그들의 주력군은 항복하였으며, [From.From.GetNameDef](은)는 이제 그들의 본토를 통제하고 있습니다.\n\n이 치명적인 손실에도 불구하고, [From.From.GetNameDef](와)과의 전쟁은 아직 끝나지 않았습니다."
