--- a/localisation/factions_l_english.yml
+++ b/localisation/factions_l_english.yml
@@ -29,19 +29,19 @@
  french_empire:0 "제3인터내셔널"
  central_powers:0 "동맹국"
  french_entente:0 "유럽 보호 동맹"
- nordic_league:0 "북아프리카 동맹"
+ nordic_league:0 "북아메리카 동맹"
  third_internationale:0 "제3인터내셔널"
  us_north_atlantic_treaty:0 "북대서양 조약"
  us_pacific_faction:0 "태평양 동맹"
  us_proletarian_alliance:0 "프롤레타리아 동맹"
  chinese_protection_alliance:0 "아시아 연맹"
  rus_russian_sphere_faction:0 "러시아권"
- rus_second_internationale_faction:0 "제3인터내셔널"
- western_coalition_faction:0 "서부 블록"
+ rus_second_internationale_faction:0 "제2인터내셔널"
+ western_coalition_faction:0 "서방권"
  uk_fourth_internationale_faction:0 "제4인터내셔널"
- uk_imperial_confederation_faction:0 "제국 연합"
- asian_league:0 "중국 통일전선"
- balkan_protection_league:0 "발칸 보호 동맹"
+ uk_imperial_confederation_faction:0 "제국 연방"
+ asian_league:0 "중화통일전선"
+ balkan_protection_league:0 "발칸 보호동맹"
  second_internationale_faction:0 "제2인터내셔널"
  rus_proletariat_alliance:0 "프롤레타리아 동맹"
  fra_continental_system_faction:0 "신 대륙봉쇄령"
