--- a/localisation/ger_events_l_english.yml
+++ b/localisation/ger_events_l_english.yml
@@ -8,7 +8,7 @@
  prussia.17.a:0 "카이저 빌헬름 III"
  prussia.17.b:0 "헤르만 괴링"
  prussia.3.t:0 "독일 국경의 습격!"
- prussia.3.d:0 "독일 정부는 알자스 지역에 대한 공식적인 최후통첩을 보냈습니다. 그들은 알자스의 통합을 요구하며 이 지역을 독일의 일부로 봅니다.\n\n게다가 우리는 프랑스와 독일 국경 근처의 독일군이 증강되고 있다는 보고를 받았습니다. 독일군이 분쟁에 대해 만반의 준비를 하고 있다는 것은 우리에게 분명합니다. 어떻게 진행하면 좋겠습니까?"
+ prussia.3.d:0 "독일 정부는 알자스 지역에 대한 공식적인 최후통첩을 보냈습니다. 그들은 알자스의 통합을 요구하며 이 지역을 독일의 일부로 봅니다.\n\n게다가 우리는 프랑스와 독일 국경 근처의 독일군이 증강되고 있다는 보고를 받았습니다. 독일군이 분쟁에 대해 만반의 준비를 하고 있다는 것은 우리에게 분명합니다. 어떻게 진행하여야 좋을까요?"
  prussia.3.a:0 "알자스를 넘겨라."
  prussia.3.b:0 "알자스는 프랑스 땅이다!"
  prussia.4.t:0 "프랑스가 알자즈를 양도하다"
