--- a/localisation/ger_focus_l_english.yml
+++ b/localisation/ger_focus_l_english.yml
@@ -25,7 +25,7 @@
  GER_nav_desc:0 "해군 목표물에 대한 공습의 효능은 이미 1921년에 미국인들에 의해 입증되었습니다. 해군력과 전쟁을 할 생각이라면 이 공군의 분기를 소홀히 해서는 안 됩니다."
  GER_cas:0 "융커스 폭격기"
  GER_cas_desc:0 "적의 지상군을 섬멸하여 승리를 거둘 것입니다. 우리는 가깝고 깊은 목표물에 대한 전술적 타격으로 우리 군대를 지원하는 데 주력해야 합니다."
- GER_air_doctrine_goal:0 "공중 우세"
+ GER_air_doctrine_goal:0 "하늘을 지배하라"
  GER_air_doctrine_goal_desc:0 "제국 항공부의 임무는 무엇보다 중요합니다. 루프트바페가 공중에서 우위를 차지하려면 세계에서 가장 발전된 공군이어야만 합니다."
  GER_bomber:0 "터빈 구동 제트"
  GER_bomber_desc:0 "적의 산업을 파괴함으로써 승리는 달성될 것입니다. 우리는 폭격기의 설계와 생산에 전력을 기울여야 합니다."
