--- a/localisation/hun_names_localisation_l_english.yml
+++ b/localisation/hun_names_localisation_l_english.yml
@@ -7,4 +7,4 @@
  AUS_HUN_socialist_autonomy_dominion_:0 "오스트리아 인민공화국"
  AUS_HUN_socialist_autonomy_colony_:0 "오스트리아 사회주의 공화국"
  AUS_HUN_socialist_autonomy_puppet_:0 "오스트리아 민주 공화국"
- AUS_HUN_socialist_autonomy_integrated_puppet_:0 "Austrian HSR"
+ AUS_HUN_socialist_autonomy_integrated_puppet_:0 "오스트리아 헝가리 사회주의 공화국"
