--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -132,7 +132,7 @@
  royal_arsenal:0 "왕립 조병창"
  supermarine:0 "슈퍼마린"
  hawker:0 "호커 항공기"
- de_havilland:0 "드 하빌랜드"
+ de_havilland:0 "더 해빌런드"
  avro:0 "애브로"
  vickers_armstrong_bel:0 "빅커스-암스트롱"
  vickers_armstrong_eng:0 "빅커스-암스트롱"
@@ -151,7 +151,7 @@
  chrysler:0 "크라이슬러"
  army_ordnance_department:0 "육군병기부"
  rock_island_arsenal:0 "록 아일랜드 조병창"
- grumman:0 "그루먼"
+ grumman:0 "그러먼"
  bell:0 "벨"
  lockheed:0 "록히드"
  douglas_aircraft_company:0 "더글러스 항공기 회사"
@@ -200,7 +200,7 @@
  clement_attlee_desc:0 "그는 배려심 많은 남자입니다."
  john_beckett:0 "존 베켓"
  earl_browder:0 "얼 브라우더"
- harold_ickes:0 "해롤드 L. 잇키즈"
+ harold_ickes:0 "해럴드 L. 이키즈"
  charles_coughlin:0 "찰스 코글린"
  ernst_thalmann:0 "에른스트 텔만"
  kurt_schumacher:0 "쿠르트 슈마허"
@@ -346,12 +346,12 @@
  dewitt_clinton_ramsey:0 "드윗 클린턴 램지"
  marc_mitscher:0 "마크 밋처"
  curtis_lemay:0 "커티스 르메이"
- harold_mcclelland:0 "해롤드 맥클랜드"
+ harold_mcclelland:0 "해럴드 매클렐런드"
  robert_oppenheimer:0 "로버트 오펜하이머"
  robert_goddard:0 "로버트 H. 고다드"
  bernard_montgomery:0 "버나드 몽고메리"
  bernard_montgomery_desc:0 "패배에 굴하지 않고, 승리에 취하지 않는다"
- harold_alexander:0 "해롤드 알렉산더"
+ harold_alexander:0 "해럴드 알렉산더"
  james_somerville:0 "제임스 서머빌"
  tom_phillips:0 "톰 필립스"
  hugh_dowding:0 "휴 다우딩"
@@ -553,7 +553,7 @@
  fabrica_nacional_armas:0 "국립 무기 공장"
  comesa:0 "코메사"
  kingston_shipbuilding:0 "킹스턴 조선 회사"
- havilland_canada:0 "드 하빌랜드 캐나다"
+ havilland_canada:0 "더 해빌런드 캐나다"
  halifax_shipyard_limited:0 "핼리팩스 조선 주식회사"
  canadian_car_foundry:0 "캐내디언 카 & 파운드리"
  steyr_daimler_puch:0 "슈타이어-다임러-푸흐"
@@ -1561,7 +1561,7 @@
  RAJ_arthur_a_barrett:0 "아더 A. 바렛"
  RAJ_archibald_wavell:0 "아치볼드 웨이블"
  RAJ_sir_frank_messervy:0 "프랭크 매서비 경"
- RAJ_reginald_savory:0 "레지날드 세이버리"
+ RAJ_reginald_savory:0 "레지널드 세이버리"
  RAJ_kodandera_cariappa:0 "코단데라 카리아파"
  RAJ_mohan_singh:0 "모한 싱"
  RAJ_bruce_w_mcpherson:0 "브루스 W. 맥퍼슨"
@@ -1650,7 +1650,7 @@
  BHU_sonam_tobgay_dorji:0 "소남 토프가이 도르지"
  BHU_jigme_palden_dorji:0 "지그메 팔덴 도르지"
  BHU_mang_pos_bhur_bai:0 "망포스 부르바이"
- BHU_reginald_b_stevens:0 "레지날드 B. 스티븐스"
+ BHU_reginald_b_stevens:0 "레지널드 B. 스티븐스"
  BHU_jigme_dorji_wangchuck:0 "지그메 도르지 왕축"
  BHU_namgyal_bahadur:0 "남갈 바하두르"
  BHU_dorji_yeshey:0 "도르지 예쉬"
@@ -2176,7 +2176,7 @@
  LIB_iver_virgin:0 "이베어 버진"
  LIB_won_loy_chan:0 "운 로이 찬"
  LIB_george_remond:0 "조지 레몬드"
- LIB_reginald_brandon:0 "레지날드 브랜든"
+ LIB_reginald_brandon:0 "레지널드 브랜던"
  LIB_james_brooks:0 "제임스 브룩스"
  LIB_john__r_fox:0 "존 R. 폭스"
  LIB_edgar_cailloux:0 "에드가 까이유"
