--- a/localisation/japan_focus_l_english.yml
+++ b/localisation/japan_focus_l_english.yml
@@ -216,3 +216,5 @@
  JAP_silencing:0 "숙청된 반대파"
  JAP_influence_us:0 "일본 영향력"
  JAP_jungle_combat:0 "강화된 정글 훈련"
+ JAP_sea_invasion:0 "Amphibious Invasion Focus"
+ JAP_resource1:0 "Advanced Resource Extraction"
