--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -83,7 +83,7 @@
  USA_conservatives_party:0 "공화당"
  USA_socialist_party:0 "미국 사회당"
  USA_fascism_party:0 "미국 은색군단"
- USA_neutrality_party:0 "미국제일당"
+ USA_neutrality_party:0 "미국 제일당"
  FRA_communism_party:0 "프랑스 공산당"
  FRA_democratic_party:0 "급진당"
  FRA_fascism_party:0 "제국주의자"
@@ -603,3 +603,12 @@
  RMN_neutrality_party:0 "국민연합"
  RFR_neutrality_party:0 "독일 충성당"
  SIK_neutrality_party:0 "성스차이의 반군"
+ SAX_neutrality_party:0 "작센 보수당"
+ SAX_neutrality_party_long:0 "작센 보수당"
+ WSM_neutrality_party:0 "북독일 보수당"
+ WSM_neutrality_party_long:0 "북독일 보수당"
+ WUT_neutrality_party:0 "바덴-뷔르템베르크 연방당"
+ WUT_neutrality_party_long:0 "바덴-뷔르템베르크 연방당"
+ RHN_democratic_party:0 "독일 중앙당"
+ RHN_democratic_party_long:0 "독일 중앙당"
+ CRO_neutrality_party:0 "일리리아 국민당"
