--- a/localisation/replace/INOT_replace_l_english.yml
+++ b/localisation/replace/INOT_replace_l_english.yml
@@ -12,7 +12,7 @@
  STATE_804:0 "리구리아"
  STATE_806:0 "마르케"
  STATE_807:0 "아풀리아"
- STATE_808:0 "이탈리안 스위스"
+ STATE_808:0 "이탈리아계 스위스"
  STATE_809:0 "니스"
  STATE_810:0 "사부아"
  STATE_811:0 "낭시"
