--- a/localisation/rom_focus_l_english.yml
+++ b/localisation/rom_focus_l_english.yml
@@ -3,7 +3,7 @@
  ROM_renew_bulgaria_alliance_desc:0 "After we have left the Russian sphere of influence, we must find new allies in the region. Serbia is one of the stronger powers. We should renew our relations."
  ROM_pro_russian_govt:0 "친-러시아 정부 임명"
  ROM_pro_russian_govt_desc:0 "Our country is in political disarray. The government is divided between the West and the East sympathizers. A new government must be formed who will favour our Russian partners."
- ROM_war_SER:0 "서바나트 요구"
+ ROM_war_SER:0 "Claim the Rest of Banat"
  ROM_war_SER_desc:0 "Serbia is growing fast not only in its military strengh but in its size. The Serbs have already annexed the Kingdom of Montenegro, who knows what their next target will be... They must be taken down before it's too late."
  ROM_greater_bessarabia:0 "대베사라비아"
  ROM_greater_bessarabia_desc:0 "Once Romanian Bessarabia is secured, we must expand in the East. A new, greater Bessarabia is to be proclaimed to reunite all Romanians in the region under one flag."
@@ -51,8 +51,8 @@
  ROM_ally_AUS_desc:0 "Austria and Romania may have been opposed in the Great War, but both of our countries are autocratic regimes. Perhaps we should seek better relations with them?"
  ROM_ger_experience:0 "독일 군사고문단"
  ROM_ger_experience_desc:0 "The Germans completely overrun us in the Great War. With our better relations, we should learn how they were able to overrun us and use that tactic on our enemies."
- ROM_offer_AUS_transylvania:0 "오스트리아에게 트란실바니아 제안"
- ROM_offer_AUS_transylvania_desc:0 "While sounding completely insane, offering Transylvania to Austria may actually help us in the long run. With Austrian tensions with Russia at an all time high, perhaps we could convince them to let us take the Southern Ukrainian regions?"
+ ROM_offer_AUS_transylvania:0 "Non-Aggression Pact with Austria"
+ ROM_offer_AUS_transylvania_desc:0 "The State of Austria is increasingly exercising its power in the Central European region. As a regional power, Romania cannot afford such rival, perhaps a treaty of friendship should be signed instead?"
  ROM_royal_foundation:0 "페르디난드 1세 재단"
  ROM_royal_foundation_desc:0 "Ferdinand I was our benevolent king during the Great War that courageously sided with the Entente. He should be honoured with his own foundation to further Romanian research."
  ROM_follow_RUS:0 "곰과 함께"
@@ -216,10 +216,10 @@
  romania_homeland.3.d:0 "루마니아 외무부는 우리의 공식적인 지지와 동맹에 대한 대가로 트란실바니아에 대한 행정권을 반환한다는 전보를 보냈습니다."
  romania_homeland.3.a:0 "좋아!"
  romania_homeland.3.b:0 "더이상 필요 없다..."
- romania_homeland.4.t:0 "루마니아가 오스트리아에 트란실바니아를 제안하다"
- romania_homeland.4.d:0 "루마니아 외무부는 우리의 공식적인 지지와 동맹에 대한 대가로 트란실바니아에 대한 행정권을 반환한다는 전보를 보냈습니다."
- romania_homeland.4.a:0 "좋아!"
- romania_homeland.4.b:0 "더이상 필요 없다..."
+ romania_homeland.4.t:0 "Non-Aggression Pact with Romania"
+ romania_homeland.4.d:0 "The Romanian Foreign Ministry has sent us a telegram offering a treaty of friendship to preserve peace in the Central European Region as well as in the Balkans. \n\nRomania suggests a non-aggression pact should be signed between the two together with an increased trade agreements.\n\nHow should we respond?"
+ romania_homeland.4.a:0 "Now is not the time for conflicts"
+ romania_homeland.4.b:0 "We have other plans for Romania..."
  romania_homeland.5.t:0 "루마니아가 자치권을 요청하다"
  romania_homeland.5.d:0 "A telegram has arrived at the Winter Palace from HM King Carol II of Romania asking for the withdrawl of our troops from Romanian sovereign territory.\n Romania has been our main ally in the past 20 years. With their request they state that Russo-Romanian relations will not undergo changes."
  romania_homeland.5.a:0 "Let them Be"
@@ -263,9 +263,15 @@
  romanian_diplo_mission:0 "루마니아 외교 사절"
  republican_govt:0 "민주적 성향"
  faith_in_the_west:0 "서방에 대한 믿음"
- transfered_transylvania:0 "트란실바니아의 양도"
+ transfered_transylvania:0 "Non-Aggression Pact"
  ROM_invitations_tt:0 "§Y국가 중점§! 달성에 따라 §Y터키§!, §Y세르비아§!, §Y그리스§!는 우리 세력에 초청을 받게 됩니다.\n"
  ROM_fortifications_tt:0 "전국에 §Y요새 단지§!가 건설될 것입니다.\n"
  ROM_prepare_coup_warning_tt:0 "§R시간을 제대로 맞추지 못하면 러시아와의 전쟁으로 이어질 수도 있습니다!§!\n\n"
  ROM_trans_balkan_tt:0 "우리 §Y세력§!의 규모에 따라 §Y발칸§! 지역을 중심으로 다양한 §Y기반시설§! 계획이 건설될 것입니다.\n"
  ROM_romanian_faction_league:0 "제3 발칸 동맹"
+ romania_homeland.12.t:0 "Austria Accepts the Treaty!"
+ romania_homeland.12.d:0 "The government of Austria has expressed its desire to sign the treaty of friendship between the two countries.\n"
+ romania_homeland.12.a:0 "Great News!"
+ romania_homeland.13.t:0 "Austria Refuses!"
+ romania_homeland.13.d:0 "The government of Austria has refused to sign the treaty of friendship between the two countries.\n"
+ romania_homeland.13.a:0 "Looks like they have different plans..."
