--- a/localisation/rus_focus_l_english.yml
+++ b/localisation/rus_focus_l_english.yml
@@ -107,8 +107,8 @@
  RUS_imperial_glory_desc:0 "우리는 대전 중에 죽은 사람들을 잊지 않을 것입니다. 그들은 우리가 우리의 제국에 영광을 가져오도록 도왔고, 우리는 그들에게 영광을 가져다 줄 것입니다!"
  RUS_demand_moldova:0 "몰다비아 요구"
  RUS_demand_moldova_desc:0 "우리는 현재 베사라비아의 루마니아어권인 동부 몰도바 지역을 소유하고 있습니다. 루마니아는 우리가 이전 세기에 그들의 독립을 위해 싸운 이후로 이 지역을 주장해 왔습니다. 그들은 베사라비아가 러시아 영토라는 것, 또는 몰다비아가 루마니아 땅이 아니라는 것을 받아들일 필요가 있습니다."
- RUS_war_AFG:0 "아프가니스탄과의 전쟁"
- RUS_war_AFG_desc:0 "우리와 국경을 접한 비동맹국가에 대한 영향력을 가지는 것은 중요합니다. 우리는 영국의 반대를 무릅쓰고서라도 러시아 제국의 보루로서 아프가니스탄을 확보해야 합니다."
+ RUS_war_AFG:0 "Central Asian War Logistics"
+ RUS_war_AFG_desc:0 "If we plan to spread our influence in the Central Asia and beyond, new roads and railroads must be constructed in the region to support our logistics."
  RUS_african_deal:0 "식민지 확장"
  RUS_african_deal_desc:0 "우리의 식민 제국은 확장을 필요로 합니다. 최근 영국과 관계가 수립됨에 따라, 우리는 아프리카에서 국경을 넓힐 것입니다."
  RUS_legend_of_death_squad:0 "죽음의 대대의 전설"
@@ -153,7 +153,7 @@
  RUS_okhranka_police_desc:0 "우리는 차르의 비밀경찰인 공안질서수호국(오흐란카)를 재정비해야 합니다. 오흐란카의 확장은 우리 통치자의 안전을 보장할 것입니다."
  RUS_agricole_policy:0 "친농정책"
  RUS_agricole_policy_desc:0 "러시아는 항상 농장에 기반을 둔 경제로, 자신과 이웃들에게 식량을 공급해 왔습니다. 우리는 민간 공장을 개선하고 경공업의 확장을 통해 이 정책을 지속해야 합니다."
- RUS_refinery:0 "정유시설 확장 계획"
+ RUS_refinery:0 "정제소 확장 계획"
  RUS_refinery_desc:0 "러시아는 자원이 풍부하지만 유사시 석유나 고무 같은 필수품이 바닥나지 않을 것임을 보장해두어야 합니다."
  RUS_civil_effort:0 "젬스트보 투자"
  RUS_civil_effort_desc:0 "주요 공장의 확장은 우리 군대를 더 효과적으로 무장시키고 우리 인구를 위한 고용을 제공할 뿐만 아니라, 우리 나라를 더욱 현대화할 수 있게 해줄 것입니다."
