--- a/localisation/ser_focus_l_english.yml
+++ b/localisation/ser_focus_l_english.yml
@@ -59,8 +59,8 @@
  SER_Propose_Unification_desc:0 "After the Great War, we wanted to unify with Croatia to create a strong South Slavic state. The pesky Italians and Russians forced us to drop this idea. With our government finally secure, we can throw caution to the wind: it's time to start unification talks with Croatia."
  SER_give_ruma:0 "루마를 크로아티아에 수여"
  SER_give_ruma_desc:0 "Ruma has been a contested state since the Great War. The state is mainly Croat, but was given to Serbia anyway. This dispute has caused tension with the Croatian government, which is not something we want. We need to show Croatia that we are focused on the Unification. Returning Ruma to them is for the best."
- SER_guarentee_bosnian_rights:0 "보스니아 문제 해결"
- SER_guarentee_bosnian_rights_desc:0 "Like Ruma with Croatia, Bosnia is a region filled with Serbs. Since they were awarded the region, Croatia has been cordial with the Bosnians, and has given them self-government and autonomy. The Croatian government fears that after unification, we will suppress the Islamic Bosniaks and revoke their self-rule. If we can guarantee their autonomy will be maintained, it would be one step closer to Serbo-Croatian integration."
+ SER_guarentee_bosnian_rights:0 "Grant More Rights to Bosnians"
+ SER_guarentee_bosnian_rights_desc:0 "Like Ruma with Croatia, Bosnia is a region populated with Serbs. Throught the history, this created tensions between the Serbs and local Bosnians populations. To ease the tensions in the region, we should grant new rights and respect Bosnian identity if we wish to reunite Yugoslavia."
  SER_dimplomatic_effort:0 "통일 회담 완결"
  SER_dimplomatic_effort_desc:0 "The major and pressing issues have been resolved. All we have left is to talk about smaller matters such as our future political, governmental, and economic systems to finalise our unification talks."
  SER_science_effort:0 "세르비아-크로아티아 연구 협력"
@@ -119,8 +119,8 @@
  SER_better_conditions_desc:0 "With our industrial advancements, we should focus on the future. Send the order to expand our research capacity."
  SER_arms_industry:0 "Refurbish Old Factories"
  SER_arms_industry_desc:0 "Throughout our country, there are many factories that have recently closed down. These buildings can easily be remodeled and used as new military factories."
- SER_situation:0 "산업의 기로"
- SER_situation_desc:0 "Both our civilian industry and our military industry are extremely weak. However, we can only remedy one of these issues. The choice is yours."
+ SER_situation:0 "Improve the Serbian Railways"
+ SER_situation_desc:0 "Both our civilian industry and our military industry are extremely weak. In order to rebuild them, we must first invest into rail."
  SER_army_focus:0 "군수산업 확장"
  SER_army_focus_desc:0 "Without a sufficient war industry, our troops will be under-supplied and be massacred when in battle. We obviously need to expand our military factories."
  SER_weapon_support:0 "소화기 주력"
@@ -194,3 +194,5 @@
  SER_take_greece_desc:0 "Greece an ally we have been through mud and snow. But how long will Greece still be a ally. They are distaning themself more and more from us. And the new Dictaturship there should not be underestimated. We should take them out now before their goal change."
  SER_take_bulgaria:0 "불가리아 제거"
  SER_take_bulgaria_desc:0 "Bulgaria was once an enemy. They tried to steal our lands in the Second Balkan War and tried it again in WW1 with the Central Powers. Bulgaria has been now crippled. But it seems like they want to regain their power by joining the Russians. We have to finally stop this madness."
+ SER_war_with_bule:0 "Attack Bulgaria"
+ SER_war_with_bule_desc:0 "Bulgarian re-armament could very well destabilise the Balkans and our position in the region. Since the WW1, Serbia is a lot stronger than Bulgaria, we could use our current situation and strike first."
