--- a/localisation/ser_ideas_l_english.yml
+++ b/localisation/ser_ideas_l_english.yml
@@ -11,3 +11,16 @@
  SER_woman_soldiers:0 "여군"
  SER_workers_strikes:0 "노동자 파업"
  SER_alexander:0 "알렉산다르 1세"
+ SER_bosnian_rights_idea:0 "Bosnian Rights"
+ SER_slobodan_jovanovic:0 "Slobodan Jovanović"
+ SER_milan_nedic:0 "Milan Nedić"
+ SER_ivan_ribar:0 "Ivan Ribar"
+ SER_ljubomir_maric:1 "Ljubomir Marić"
+ SER_marijan_polic:1 "Marijan Polić"
+ SER_draza_mihailovic:1 "Draža Mihailović"
+ SER_josip_broz_tito:0 "Josip Broz Tito"
+ SER_arso_jovanovic:0 "Arso Jovanović"
+ SER_mihajlo_lukic:1 "Mihajlo Lukić"
+ SER_danilo_kalafatovic:1 "Danilo Kalafatović"
+ SER_borivoje_mirkovic:1 "Borivoje Mirković"
+ austria_acc_flag:0 "Austria has accepted the proposal"
