--- a/localisation/spr_focus_l_english.yml
+++ b/localisation/spr_focus_l_english.yml
@@ -403,3 +403,10 @@
  spain.33.t:0 "The Civil war Escalates!"
  spain.33.d:0 "In order for Republic to survive, we must fight and defeat the traitors! The Republic will prevail!"
  spain.33.a:0 "To arms!"
+ spain.100.t:0 "Victory in the Spanish Civil War!"
+ spain.100.d:0 "The Spanish mainland is now secured under [ROOT.GetRulingIdeology] control. Even though there are still enemy holdouts left in Spain and in our overseas territories, we can already proclaim a victory!.\n\n"
+ spain.100.a:0 "Spain is finally at peace!"
+ spain.101.t:0 "The End of the Spanish Civil War"
+ spain.101.d:0 "With the surrender of the last rebel forces, the Spanish Civil War has come to an end. \n\nThe [Root.GetRulingIdeology] side have emerged victorious, and a new era has begun for Spain. \n\nThe war-torn country has suffered greatly in the fighting, and there is much rebuilding to be done."
+ spain.101.a:0 "An interesting development."
+ spain.101.b:0 "Now to heal our nation."
