--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -2,7 +2,7 @@
  STATE_1:0 "코르시카"
  STATE_2:0 "라티움"
  STATE_3:0 "로만디"
- STATE_4:0 "하오스트리아"
+ STATE_4:0 "니더외스터라이히"
  STATE_5:0 "동프로이센"
  STATE_6:0 "플란데런"
  STATE_7:0 "홀란트"
@@ -54,9 +54,9 @@
  STATE_53:0 "니더바이에른"
  STATE_54:0 "프랑켄"
  STATE_55:0 "헤센"
- STATE_56:0 "베저-엠스"
+ STATE_56:0 "베저엠스"
  STATE_57:0 "베스트팔렌"
- STATE_58:0 "슐레스비히-홀슈타인"
+ STATE_58:0 "슐레스비히홀슈타인"
  STATE_59:0 "하노버"
  STATE_60:0 "튀링겐"
  STATE_61:0 "메클렌부르크"
@@ -100,12 +100,12 @@
  STATE_99:0 "유틀란트"
  STATE_100:0 "아이슬란드"
  STATE_101:0 "그린란드"
- STATE_102:0 "슬로베니아"
+ STATE_102:0 "운터슈타이어마르크"
  STATE_103:0 "달마티아"
  STATE_104:0 "보스니아"
  STATE_105:0 "몬테네그로"
  STATE_106:0 "마케도니아"
- STATE_107:0 "세르비아"
+ STATE_107:0 "베오그라드"
  STATE_108:0 "모라바"
  STATE_109:0 "크로아티아"
  STATE_110:0 "외스틀란데트"
@@ -123,13 +123,13 @@
  STATE_122:0 "웨일스"
  STATE_123:0 "콘월"
  STATE_124:0 "고틀란드"
- STATE_125:0 "이스트 오브 잉글랜드"
+ STATE_125:0 "이스트앵글리아"
  STATE_126:0 "그레이터런던"
  STATE_127:0 "서식스"
- STATE_128:0 "웨스트 미들랜즈"
- STATE_129:0 "이스트 미들랜즈"
+ STATE_128:0 "웨스트미들랜즈"
+ STATE_129:0 "이스트미들랜즈"
  STATE_130:0 "요크셔"
- STATE_131:0 "노스 잉글랜드"
+ STATE_131:0 "북잉글랜드"
  STATE_132:0 "랭커셔"
  STATE_133:0 "라나크"
  STATE_134:0 "코노트"
@@ -142,7 +142,7 @@
  STATE_141:0 "스베알란드"
  STATE_142:0 "베스틀란데트"
  STATE_143:0 "트뢰넬라그"
- STATE_144:0 "노르 노르게"
+ STATE_144:0 "노르노르게"
  STATE_145:0 "올란드"
  STATE_146:0 "카렐리야"
  STATE_147:0 "살라"
@@ -150,9 +150,9 @@
  STATE_149:0 "포흐얀마"
  STATE_150:0 "사보"
  STATE_151:0 "독일계 스위스"
- STATE_152:0 "상오스트리아"
+ STATE_152:0 "오버외스터라이히"
  STATE_153:0 "티롤"
- STATE_154:0 "알푈드"
+ STATE_154:0 "얼푈드"
  STATE_155:0 "트란스다뉴비아"
  STATE_156:0 "칼라브리아"
  STATE_157:0 "아브루초"
@@ -403,7 +403,7 @@
  STATE_402:0 "아흐투빈스크"
  STATE_403:0 "튜멘"
  STATE_404:0 "키질 오르다"
- STATE_405:0 "타슈켄트"
+ STATE_405:0 "부하라"
  STATE_406:0 "구리예프"
  STATE_407:0 "우랄스크"
  STATE_408:0 "블라디보스토크"
@@ -582,10 +582,10 @@
  STATE_581:0 "북우랄"
  STATE_582:0 "마그니토고르스크"
  STATE_583:0 "쿠스타나이"
- STATE_584:0 "아슈하바트"
+ STATE_584:0 "히바"
  STATE_585:0 "우르겐치"
  STATE_586:0 "베르니"
- STATE_587:0 "우스튜르트"
+ STATE_587:0 "포르트알렉산드롭스키"
  STATE_588:0 "세미팔라틴스크"
  STATE_589:0 "아야쿠스"
  STATE_590:0 "아크몰린스크"
