--- a/localisation/strategic_region_names_l_english.yml
+++ b/localisation/strategic_region_names_l_english.yml
@@ -94,7 +94,7 @@
  STRATEGICREGION_94:0 "마리아나 해역"
  STRATEGICREGION_95:0 "서엠퍼러 해저 산열"
  STRATEGICREGION_96:0 "북엠퍼러 해저 산열"
- STRATEGICREGION_97:0 "동부 미크로네시아"
+ STRATEGICREGION_97:0 "미크로네시아 동부"
  STRATEGICREGION_98:0 "대호주만"
  STRATEGICREGION_99:0 "극동 인도양"
  STRATEGICREGION_100:0 "홍해"
