--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -689,7 +689,7 @@
  VICTORY_POINTS_4982:0 "조지타운"
  VICTORY_POINTS_8051:0 "도하"
  VICTORY_POINTS_1384:0 "두샨베"
- VICTORY_POINTS_12333:0 "아슈가바트"
+ VICTORY_POINTS_12333:0 "아시하바트"
  VICTORY_POINTS_12583:0 "비슈케크"
  VICTORY_POINTS_3707:1 "키시너우"
  VICTORY_POINTS_5128:0 "안타나나리보"
@@ -977,3 +977,5 @@
  VICTORY_POINTS_9638:0 "바젤"
  VICTORY_POINTS_11590:0 "로잔"
  VICTORY_POINTS_6706:0 "갈라치"
+ VICTORY_POINTS_3879:0 "케산"
+ VICTORY_POINTS_7775:0 "부하라"
