--- a/localisation/chi_focus_l_english.yml
+++ b/localisation/chi_focus_l_english.yml
@@ -116,51 +116,51 @@
  CHI_secret_police:0 "비밀경찰"
  CHI_secret_police_desc:0 "비밀경찰로 적 지역의 반군을 추적하고 공산당의 지지자를 찾는 문제를 줄일 수 있을 것입니다."
  CHI_fight_the_famines:0 "기근과의 싸움"
- CHI_fight_the_famines_desc:0 "Now that we have finally solved our famine issues we can finally concentrate our attention to stopping the famines."
+ CHI_fight_the_famines_desc:0 "이제야 마침내 기근 문제를 해결했으니 기근을 멈추는 데에 주의를 집중할 수 있습니다."
  CHI_foreign_investments:0 "외국 투자"
- CHI_foreign_investments_desc:0 "With foreign investments from western companies we can rebuild some of our industry."
+ CHI_foreign_investments_desc:0 "서양 회사의 외국 투자로 인해 우리 산업 일부를 재건할 수 있습니다."
  CHI_diplomacy:0 "세계 외교"
- CHI_diplomacy_desc:0 "Our country was never interested in diplomacy.This needs to change.Everyone needs allies even we!"
+ CHI_diplomacy_desc:0 "우리나라는 외교에 관심이 없었습니다. 이는 바뀌어야 합니다. 우리를 포함해 모든 사람은 동맹이 필요합니다!"
  CHI_peace:0 "평화로운 서방"
- CHI_peace_desc:0 "The Entente is the only faction in the world which seeks a peaceful path just like we aim for.It would for our best interests to join them."
+ CHI_peace_desc:0 "협상국은 세상에서 우리가 추구하는 것과 같이 평화의 길을 추구하는 유일한 세력입니다. 그들과 함께하는 것이 우리 최대의 관심사가 될 것입니다."
  CHI_imperial:0 "제국주의자"
- CHI_imperial_desc:0 "In search of allies we look for strengh and stability. Russia and Germany are strong and reliable Empires. Perhaps we should consider membership in the Eastern Coalition or the Berlin Pact."
+ CHI_imperial_desc:0 "동맹을 찾을 때 우리는 국력과 안정성을 따집니다. 러시아와 독일은 강력하고 믿을 만한 제국입니다. 아마도 우리는 동부 연합이나 베를린 조약 가입을 고려해야 할 지도 모릅니다."
  CHI_approach_ENG:0 "영국에 접근"
- CHI_approach_ENG_desc:0 "We had our issues with England but those are in the past.They can protect the seas of Asia with their navy."
+ CHI_approach_ENG_desc:0 "우린 영국과의 문제가 있었지만 그건 모드 과거의 일입니다. 영국은 함대로 아시아의 바다를 지킬 수 있습니다."
  CHI_approach_FRA:0 "프랑스에 접근"
- CHI_approach_FRA_desc:0 "France would be a great ally for China.They can help us with modernizing our military."
+ CHI_approach_FRA_desc:0 "프랑스는 중국과 훌륭한 동맹이 될 것입니다. 그들은 우리 군대의 현대화를 도울 수 있습니다."
  CHI_joint_research:0 "연구 협력"
- CHI_joint_research_desc:0 "To improve our weapons,England send militaric scientists to improve our weapons."
+ CHI_joint_research_desc:0 "영국은 우리 무기를 개선하기 위해 군사과학자들을 보내왔습니다."
  CHI_french_advisors:0 "프랑스 고문단"
- CHI_french_advisors_desc:0 "France promised us advisors to modernize our tactics so that we are more preapered for a war."
+ CHI_french_advisors_desc:0 "프랑스는 우리 전술을 현대화하여 전쟁을 조금 더 준비하기 위해 고문 파견을 약조했습니다."
  CHI_join_ENG:0 "서부 연합 가입"
- CHI_join_ENG_desc:0 "After formalizing our relations with France and England we should now ask them to join their faction."
+ CHI_join_ENG_desc:0 "프랑스와 영국과 관계를 공식화한 뒤 우리는 그들의 세력에 가입을 청해야 합니다."
  CHI_western_colonies:0 "서방 식민지"
- CHI_western_colonies_desc:0 "Now that we are allied with western nations we may have a chance to buy the city colonies of the western nations."
+ CHI_western_colonies_desc:0 "이제 우리는 서방 국가들과 동맹을 맺었으니 이들의 식민 도시들을 구매할 기회를 가질 수 있을 것입니다."
  CHI_mission_RUS:0 "러시아에 접근"
- CHI_mission_RUS_desc:0 "During the civil war Russia trained our division and helped us against the warlord.Without them we woudnt controll all of China.Even if they still occupy Sinkiang as a puppet we can look forward for positive relations."
+ CHI_mission_RUS_desc:0 "내전 중 러시아는 우리 사단을 훈련시켰고 군벌에 대항하는 것을 도왔습니다. 그들이 없었더라면 우리는 중국 전역을 통제할 수 없었을 것입니다. 그들이 여전히 신강을 괴뢰국으로써 점령하고 있다고 하더라도 긍정적인 관계를 기대할 수 있습니다."
  CHI_approach_GER:0 "독일에 접근"
- CHI_approach_GER_desc:0 "Germany is one of the strongest nations of the world and has the similar goals just like us.Revenge against the Entente."
+ CHI_approach_GER_desc:0 "독일은 세계에서 가장 강력한 국가들 중 하나이며 우리와 비슷한 목표가 있습니다. 협상국에 복수하는 것 말입니다."
  CHI_naval_research:0 "러시아 군사 협력"
- CHI_naval_research_desc:0 "Japan is not just a threat to us but also to Russia.They would be propably very happy to send advisors for us to fight against Japan."
+ CHI_naval_research_desc:0 "일본은 우리만 위협하는 것이 아니라 러시아도 위협하고 있습니다. 아마도 러시아는 일본과 싸우기 위해 우리에게 고문을 파견하는 것을 매우 기뻐할 것 같습니다."
  CHI_join_RUS:0 "동부 연합 가입"
- CHI_join_RUS_desc:0 "The Russian helped us in the civil war with the warlords and sent us military advisors in the last days to improve our military.They need us to protect their asian holdings against Japan.Together no one will stop us!"
+ CHI_join_RUS_desc:0 "러시아는 내전에서 군벌에 대항하는 것을 도왔으며 지난날 우리 군대 개선을 위해 군사고문을 보냈습니다. 그들은 일본에 대항하여 아시아의 자산을 지키는 데에 우리가 필요합니다. 함께라면 누구도 우리를 막을 수 없습니다!"
  CHI_Sinkiang_issue:0 "신장 거래"
- CHI_Sinkiang_issue_desc:0 "Sinkiang is a Chinese country.While we were fighting the warlords in the last years Russia invaded the Sinkiang region and set up their state there for protection.Now that the civil war is over and we're allied with Russia we can finally discuss with Russia the issue with Sinkiang."
+ CHI_Sinkiang_issue_desc:0 "신강은 중국계 국가입니다. 지난 몇 년간 군벌과 싸우는 동안 러시아는 신강 지역을 침공하여 보호국을 수립했습니다. 이제 내전이 끝났고 러시아와 동맹을 맺었으니 마침내 신강 문제에 대해 논할 수 있습니다."
  CHI_improve_equipment:0 "독일제 무기"
- CHI_improve_equipment_desc:0 "In the last hundred years most of the best inventions of the world are German especially in the military.Even today the German States own the best weapons of the world.We could "
+ CHI_improve_equipment_desc:0 "지난 100년간 세계에서 가장 위대한 발명은 독일에서, 특히 군사 분야에서 나타났습니다. 오늘날에도 독일국은 세계에서 가장 좋은 무기를 지녔습니다. 우리는 할 수 있습니다."
  CHI_inv_GER:0 "베를린 조약 가입"
  CHI_inv_GER_desc:0 "In the last days we imrpoved the relations with Germany.It's time to formalize those relations by joining the Berlin Pact which members will surely be happy to help us."
  CHI_stabilize_economy:0 "경제 안정화"
- CHI_stabilize_economy_desc:0 "Our economy is in ruins.If we want our state to survive we now have to take the first steps to recovery."
+ CHI_stabilize_economy_desc:0 "우리 경제는 폐허 속에 있습니다. 만일 우리나라가 살고자 한다면 이제 회복을 위한 첫걸음을 내딛어야 합니다."
  CHI_infrastructure:0 "동부 철로"
- CHI_infrastructure_desc:0 "The infrastructure was one of the best in world now its considered to be outdated.With a new infrastructure programm we can improve those flaws.But first we should focus on the states of our country which have the worst infrastructure in the west"
+ CHI_infrastructure_desc:0 "기반시설은 세계 최고였지만 이제는 구식으로 간주됩니다. 새 기반시설 계획으로 우리는 이런 흐름을 개선할 수 있습니다. 그러나 먼저 기반시설이 가장 형편없는 나라의 서쪽 지역부터 집중해야 합니다."
  CHI_industrial_effort1:0 "민간경제 깨우기"
- CHI_industrial_effort1_desc:0 "During the factory strikes much of the civilian economy was burnt down.It's time to revive those factories and to give the people work."
+ CHI_industrial_effort1_desc:0 "공장 파업 중 많은 민간경제가 불에 탔습니다. 이제 이 공장들을 재건하고 사람들에게 일자리를 줄 때입니다."
  CHI_industrial_effort2:0 "군수공장 확장"
- CHI_industrial_effort2_desc:0 "We have the biggest army in Asia but we do not have enough arms factories to supply it.With new arms factories in the undeveloped states we can finally supply our army with enough equipment."
+ CHI_industrial_effort2_desc:0 "우리 군대는 아시아에서 가장 크지만 이를 보급할 충분한 군수공장이 없습니다. 개발되지 않은 주에 새 군수공장이 있다면 마침내 충분한 장비로 군을 보급할 수 있습니다."
  CHI_dockyard_effort:0 "해군 산업 시작"
- CHI_dockyard_effort_desc:0 "China had once one of the greastest navies in Asia.Now it has the weakest.But we can rebuild it!With an new dockyard programm we can start building ships again for our glorius country!"
+ CHI_dockyard_effort_desc:0 "중국은 한때 아시아에서 가장 위대한 해군이 있었습니다. 지금은 가장 약합니다. 그러나 다시 재건할 수 있습니다! 새 조선소 계획으로 영광스러운 나라를 위한 선박 건조를 시작할 수 있습니다."
  CHI_slot2:0 "산업 연구 부서"
  CHI_slot2_desc:0 "During our time we were rebuilding this nation many foreign scientists came to our country and due to our reforms more people got invested in the industry.We can now reach the same research abilities that the other big nations in this world have. "
  CHI_school_reform:0 "학교 개혁"
