--- a/localisation/fra_l_english.yml
+++ b/localisation/fra_l_english.yml
@@ -42,7 +42,7 @@
  FR_marines:0 "해병대 주력"
  FR_marine_desc:0 "우리는 바다에서의 우리의 공격을 현대화해야 합니다. 말할 것도 없이 상륙 작전은 우리가 투자해야 할 새로운 형태의 전투입니다."
  FR_fighter:0 "경항공기 생산 중점"
- FR_fighter_desc:0 "공중 우세을 확보하기 위해서는 현재의 전투기 모델을 개선하는 것이 절대적으로 중요합니다."
+ FR_fighter_desc:0 "공중우세를 확보하려면 현재의 전투기 모델을 개선하는 것이 절대적으로 중요합니다."
  FR_naval_bomber:0 "뇌격기 편대 개선"
  FR_naval_bomber_desc:0 "뇌격기 편대를 재건하여 우리 해군 함정을 보호해야 합니다."
  FR_bomber:0 "중항공기 생산 중점"
@@ -71,7 +71,7 @@
  FR_slot2_desc:0 "우리는 연구 역량을 늘릴 수 있는 능력을 가지고 있습니다. 우리는 이 기회를 잡아야만 우리 군대를 현대화시킬 수 있습니다."
  FR_regain_stability:0 "안정 되찾기"
  FR_regain_stability_desc:0 "수년 간의 권력투쟁은 지났고 이제는 우리나라와 경제를 안정시킬 때입니다."
- FR_home_infra:0 "SNCF에 투자"
+ FR_home_infra:0 "프랑스 국유철도 자금 지원"
  FR_home_infra_desc:0 "우리의 기반시설은 나쁠 수도 있지만, 반대로 더 좋아질 수도 있습니다."
  FR_home_civil:0 "본토 개발"
  FR_home_civil_desc:0 "우리의 산업화 의제를 계속하기 위해 더 많은 민간 공장이 건설될 필요가 있습니다."
@@ -94,7 +94,7 @@
  FR_defense:0 "베이강의 계획"
  FR_defense_desc:0 "우리나라는 침략자가 아니므로 방어적 교리를 펴야 합니다. 따라서 보병과 포병전에 초점을 맞춘 막심 베이강이 고안한 방어계획을 채택하는 것이 더 적합합니다."
  FR_offense:0 "가믈랭의 계획"
- FR_offense_desc:0 "우리나라는 아직 자연경계에 도달하지 못했기 때문에 우리는 공격적 교리를 발표해야 합니다. 모리스 가믈랭이 제안한 계획은 최근의 기갑 공학의 발전뿐만 아니라 기동전에서의 우세를 고려합니다."
+ FR_offense_desc:0 "우리나라는 아직 자연국경에 도달하지 못하였기 때문에 우리는 공격적인 교리를 발표하여야 합니다. 모리스 가믈랭이 제안한 계획은 최근의 기갑 공학의 발전 뿐만 아니라 기동전에서의 우세를 고려합니다."
  FR_decolonization:0 "아프리카 탈식민지화"
  FR_decolonization_desc:0 "아프리카 사람들은 그들이 더 이상 우리의 지배를 받고 싶지 않다는 것을 보여주었습니다. 그들과 싸우는 대신에 우리가 그들을 내버려 두는 것이 낫습니다."
  FR_entente:0 "협상국 부활"
@@ -115,7 +115,7 @@
  FR_demand_BEL:0 "벨기에 탈환"
  FR_demand_BEL_desc:0 "나폴레옹 통치 기간 동안 벨기에는 오스트리아인으로부터 압류되어 프랑스 제국에 통합되었습니다. 벨기에에는 수세기 동안 프랑스어를 구사해온 우알로니 지역이 있습니다. 우리는 천년 동안 성가신 네덜란드인들과 한 나라를 함께 나누었던 우리의 동료 프랑스인들을 다시 만나야 합니다. 전쟁을 위하여!"
  FR_demand_SWI:0 "헌법 개정"
- FR_demand_SWI_desc:0 "프랑스 공화국은 더 이상 아닙니다. 이제 우리의 헌법을 개정하고 제2차 부르봉 복고를 준비해야 할 때입니다."
+ FR_demand_SWI_desc:0 "프랑스 공화국은 더 이상 아니므로, 우리의 헌법을 개정하고 제2차 부르봉 복고를 준비하여야 할 때입니다."
  FR_help_SPR:0 "대규모 국유화"
  FR_help_SPR_desc:0 "새로운 친좌파 정부 하에서 우리는 산업과 농업 분야를 국유화해야 합니다. 이것은 우리가 이러한 정부의 요구에 대해 좀 더 유연한 경제를 가질 수 있게 해줄 것입니다."
  FR_political_commisars:0 "연맹 금지"
@@ -133,19 +133,19 @@
  FR_strike_east:0 "동부에 혁명 전파"
  FR_strike_east_desc:0 "때가 되었으니 동부를 쳐야 합니다. 영광스러운 인민군은 베를린을 향해 진군한 다음 모스크바를 점령할 것입니다. 혁명 만세!"
  FR_fascist:0 "프랑스에 영광을!"
- FR_fascist_desc:0 "우리는 마침내 알자스-로렌을 불법적으로 압류한 것에 대해 프로이센에게 복수를 하게 되었습니다. 하지만 왜 거기서 멈추겠습니까? 우리 국경 밖에는 수백만의 프랑스 동료들이 있으니, 이제 삼색기 밑에서 통일해야 할 때입니다!"
+ FR_fascist_desc:0 "우리는 마침내 알자스-로렌을 불법적으로 점령한 것에 대하여 프로이센에 복수하게 되었습니다. 하지만 왜 거기서 멈추겠습니까? 우리 국경 밖에는 수백 만의 프랑스 동료들이 있으니, 이제 삼색기 아래에서 통일하여야 할 때입니다!"
  FR_war_ITA:0 "사보이-피에몬트 탈환"
  FR_war_ITA_desc:0 "19세기 초에 우리는 사보이 피에몬트 지역을 손에 넣을 수 있었습니다. 이 땅에는 프랑스인이 많지 않지만, 우리의 자연경계 중 하나입니다! 우리는 항상 그 지역에 새로운 프랑스인들을 정착시킬 수 있고... 이탈리아 사람들을 돌볼 수 있을 것입니다."
  FR_kingdom_restoration:0 "왕정복고"
  FR_kingdom_restoration_desc:0 "오를레앙 가문은 19세기 동안 18년간 프랑스를 지배했습니다. 그들은 부르봉 가문에 비해 프랑스 왕좌에 대한 가장 강력한 권리를 가지고 있지 않지만, 프랑스를 영광으로 만들 잠재력은 있습니다. 우리는 장 왕을 왕위에 올려놓아야 합니다."
  FR_empire_restoration:0 "제정복고"
- FR_empire_restoration_desc:0 "나폴레옹 왕조는 두 차례에 걸쳐 프랑스를 통치했습니다. 나폴레옹 1세가 제1제국을 지배했고, 조카 나폴레옹 3세가 제2제국을 통치했습니다. 나폴레옹 3세는 비참하게 실패했지만, 나폴레옹 1세는 역사상 가장 성공적인 프랑스인이었습니다. 우리는 그의 후손인 나폴레옹 6세를 왕위에 올려놓아야 합니다."
+ FR_empire_restoration_desc:0 "나폴레옹 왕조는 두 차례에 걸쳐 프랑스를 통치하였습니다. 나폴레옹 1세가 제1제국을 통치하였고, 조카 나폴레옹 3세가 제2제국을 통치하였습니다. 나폴레옹 3세는 비참하게 실패하였지만, 나폴레옹 1세는 역사상 가장 성공적인 프랑스인이었습니다. 우리는 그의 후손인 나폴레옹 6세를 왕위에 올려놓아야 합니다."
  FR_gov_reform:0 "신정부"
- FR_gov_reform_desc:0 "힘든 시기에 우리는 강해져야 합니다. 우리는 새로운 세계에 맞도록 우리 정부를 재정비해야 합니다."
+ FR_gov_reform_desc:0 "힘든 시기에 우리는 강해져야 합니다. 우리는 새로운 세계에 맞도록 우리 정부를 재정비하여야 합니다."
  FR_land_doctrine:0 "새로운 전투 전술"
  FR_land_doctrine_desc:0 "우리는 우리 군대를 점검하고 다음 중대한 분쟁에 대비하기 위해 약간의 국대 훈련을 실시해야 합니다."
  FR_adress_industry:0 "산업 보조금 지급"
- FR_adress_industry_desc:0 "우리는 대공황으로 인해 마비된 산업 분야를 다루는 것이 중요합니다."
+ FR_adress_industry_desc:0 "우리는 대공황으로 마비된 산업 분야를 다루는 것이 중요합니다."
  FR_retreat_line:0 "후퇴선 건설"
  FR_retreat_line_desc:0 "우리는 마지노선에 전적으로 의존할 수 없습니다. 우리는 만약 마지노선이 끝내 실패한다면 파리의 몰락을 막기 위해 새로운 방어 요새를 건설해야 합니다."
  FR_defense_paris:0 "파리 방어"
@@ -211,9 +211,9 @@
  FR_imperial_faction:0 "신 대륙봉쇄령"
  FR_imperial_faction_desc:0 "(나폴레옹 1세가 처음 도입한) 대륙봉쇄령의 부활은 우리가 영국을 포위하고 유럽 대륙에 가공할 동맹을 구축할 수 있게 해줄 것입니다."
  FR_march_south_claims:0 "프랑스 남부 국경 확보"
- FR_march_south_claims_desc:0 "프랑스 제1제국 당시 스페인과 이탈리아는 모두 프랑스의 의존국이었습니다. 우리 남쪽 국경을 지키기 위해서는 이 두 나라가 좋든 싫든 대륙봉쇄령에 동참하는 것이 필수적입니다..."
+ FR_march_south_claims_desc:0 "프랑스 제1제국 당시 스페인과 이탈리아는 모두 프랑스의 의존국이었습니다. 우리의 남부 국경을 지키려면 이 두 나라가 좋든 싫든 대륙봉쇄령에 동참하는 것이 필수적입니다..."
  FR_march_north_claims:0 "베네룩스로의 진군"
- FR_march_north_claims_desc:0 "베네룩스는 나폴레옹 1세의 통치 기간 동안 프랑스 본토로 편입된 매우 중요한 지역입니다. 우리 자신의 보호를 위해 우리도 똑같이 해야 합니다."
+ FR_march_north_claims_desc:0 "베네룩스는 나폴레옹 1세의 통치 동안 프랑스 본토로 편입된 매우 중요한 지역입니다. 우리 자신의 보호를 위하여, 우리도 똑같이 하여야 합니다."
  FR_march_east_claims:0 "국경을 동쪽으로 이동"
  FR_march_east_claims_desc:0 "라인강은 유럽에서 가장 가공할 자연 방벽 중 하나입니다. 우리의 국경을 동쪽으로 더 이동시킴으로써 프랑스가 중부 유럽 지역에서 우위를 점하게 될 것입니다."
  FR_war_ENG:0 "영국과의 전쟁"
@@ -239,7 +239,7 @@
  FR_claim_quebec:0 "프랑스령 퀘벡 요구"
  FR_claim_quebec_desc:0 "퀘벡 지역은 잃어버린 누벨프랑스의 일부입니다. 새로운 왕 아래, 프랑스는 이전의 북아메리카 식민지를 되찾을 것입니다."
  FR_normandie_niemen:0 "노르망디-네만 연대"
- FR_normandie_niemen_desc:0 "파리는 함락되었을지 모르지만 프랑스는 그렇지 않습니다. 러시아에 있는 우리의 동맹국들은 여전히 전쟁을 하고 있습니다. 우리는 적들이 아닌 그들의 전쟁 주력을 지원하기 위해 모든 것을 해야 합니다. 우리는 우선 우리의 에이스 조종사들과 함께 항공 비행대를 파견하여 그들이 공중 우세를 획득할 수 있도록 도울 것입니다."
+ FR_normandie_niemen_desc:0 "파리는 함락되었을지 모르지만 프랑스는 그렇지 않습니다. 러시아에 있는 우리의 동맹국들은 여전히 전쟁 중으로, 우리는 적에 대항하여 그들의 전쟁 노력을 지원하고자 모든 것을 하여야 합니다. 우리는 우선 우리의 에이스 조종사들과 함께 비행단을 파견하여 그들이 공중우세를 획득할 수 있도록 도울 것입니다."
  FR_rhineland_conference:0 "라인란트 회담"
  FR_rhineland_conference_desc:0 "17년 전 프랑스군에 의한 라인 전면 점령이 시작되었습니다. 그 이후로 그 지역은 유지하기에 다소 힘이 드는 곳이었습니다. 라인 점령의 운명을 결정하는 회의가 열려야 합니다."
  FR_rhineland_occupation:0 "라인란트를 점령하라"
@@ -257,7 +257,7 @@
  FR_fra_secret_service:0 "첩보 기관 재조직"
  FR_fra_secret_service_desc:0 "프랑스를 더 보호하기 위해, 우리는 첩보 기관에 자금을 지원해야 합니다. 이를 통해 우리는 적들로부터 추가적인 정보를 수집하고 어떤 분쟁에도 대비할 수 있게 될 것입니다."
  INOT_descendant_of_napoleon:0 "나폴레옹 1세의 후손"
- INOT_unpopular_pm:0 "인기 없는 수상"
+ INOT_unpopular_pm:0 "인기 없는 총리"
  fra_indochina_wargoals_tt:0 "이 국가 중점은 프랑스가 이전의 아시아 식민지에 대항하여 전쟁을 벌일 수 있도록 해줄 것입니다.\n"
  fra_north_africa_wargoals_tt:0 "이 국가 중점은 프랑스가 이전의 지중해 속지에 대항하여 전쟁을 벌일 수 있도록 해줄 것입니다.\n"
  FRA_civil_war_support_tt:0 "§R다른 정당들의 지지도에 따라, 내전이 일어날 것입니다. 비국민주의 정당에 대한 지지가 10% 미만이면 내전은 없을 것입니다.§"
@@ -293,7 +293,7 @@
  FRA_centralized_power_idea:0 "중앙집권화된 권력"
  FRA_centralize_the_power:0 "권력 중앙집권화"
  FRA_exiles_law_decision:0 "망명법 폐지"
- FRA_exiles_law_decision_desc:0 "현재, 프랑스 왕실의 귀국은 헌법에 의해 금지되어 있습니다. 우리가 군주제로 돌아가기를 원한다면, 이 법은 폐지되어야 합니다."
+ FRA_exiles_law_decision_desc:0 "현재, 프랑스 왕실의 귀국은 헌법으로 금지되어 있습니다. 우리가 군주제로 돌아가기를 원한다면, 이 법은 폐지되어야 합니다."
  FRA_seek_new_alliances_decisions:0 "협상국 확대"
  FRA_seek_new_alliances_decisions_desc:0 "프랑스가 영국과 거리를 두기로 결정함에 따라, 이를 무마하기 위해, 우리는 유럽에서 새로운 잠재적 동맹국들을 찾아야 합니다."
  FRA_invite_Czechia:0 "체코와의 동맹"
@@ -336,7 +336,7 @@
  FRA_constitutionalism_idea:0 "입헌 군주국"
  FRA_grande_armee_idea:0 "대육군"
  FRA_scars_of_the_great_war:0 "해산된 군대"
- FRA_scars_of_the_great_war_desc:0 "대전으로 위대한 세대의 젊은이들을 잃었습니다. 1917년 재앙적인 니벨 공세의 대패 이후, 프랑스 군인들은 점점 더 무정부주의자가 되었고, 군대는 무기를 드는 것을 거부했습니다. 그 결과, 프랑스군은 크게 축소되었고 오직 직업군인으로만 구성되어 있습니다."
+ FRA_scars_of_the_great_war_desc:0 "위대한 세대의 젊은이들은 대전쟁에서 죽었습니다. 1917년 재앙적인 니벨 공세의 대패 이후, 프랑스 군인들은 점점 더 무정부주의자가 되었고, 무기를 드는 것을 거부하였습니다. 그 결과, 프랑스군은 많이 축소되었고 오직 직업군인으로만 구성되어 있습니다."
  FRA_saar_crisis:0 "자르의 긴장"
  FRA_homeland_defense:0 "프랑스를 위해!"
  FRA_economy:0 "경제 개입"
@@ -347,7 +347,7 @@
  FRA_colony_state_idea:0 "식민지"
  FRA_mass_nationalization_idea:0 "산업 국유화"
  FRA_political_instability_idea:0 "거리의 폭력"
- FRA_political_instability_idea_desc:0 "정부처럼 프랑스 국민들도 분열돼 있습니다. 군대와 농촌 주민들은 점점 좌파 정당을 지지하고 있는 반면 도시는 우파와 민주파로 나뉘어 있습니다. 이것은 물론 정치적으로 반대하는 시민들 사이에 거리에서 충돌을 야기합니다."
+ FRA_political_instability_idea_desc:0 "정부처럼 프랑스 국민도 분열되어 있습니다. 군대와 농촌 주민들은 점점 좌파 정당을 지지하고 있지만, 도시는 우파와 민주파로 나뉘어 있습니다. 이것은 물론 정치적으로 반대하는 시민들 사이에 거리에서 충돌을 초래합니다."
  FRA_political_instability_2_idea:0 "고조된 거리의 폭력"
  FRA_inefficient_gov_idea:0 "비효율적인 정부"
  FRA_inefficient_gov_idea_desc:0 "현재 프랑스 정부는 크게 분열되어 있습니다. 한쪽에서는 공산주의자와 국민주의자들이 대중의 지지를 얻고 있고, 다른 한쪽에서는 민주적인 정당들이 정치적 침체를 초래하는 분열로 끊임없이 통일되지 못하고 있습니다."
@@ -468,7 +468,7 @@
  france.1036.a:0 "우호적인 서독을 수립하라."
  france.1036.c:0 "서독을 점령하라."
  france.1037.t:0 "폭력이 고조되다!"
- france.1037.d:0 "많은 국민들이 정권 교체에 불만족하고 있으며 이제는 거리에서 찾아볼 수 있습니다.\n\n파업은 폭력 시위로 변했고 총이 발사되었습니다."
+ france.1037.d:0 "많은 국민들이 정권 교체에 불만족하고 있으며 이제는 거리에서 찾아볼 수 있습니다.\n\n파업은 폭력 시위로 변하였고 총이 발사되었습니다."
  france.1037.a:0 "바라건대 이로부터 너무 심각한 일이 벌어지지 않기를..."
  france.1038.t:0 "남프랑스에서의 공산주의 봉기!"
  france.1038.d:0 "북부의 정권 교체에 불만을 품은 프랑스 남부인들은 이 문제를 스스로 해결하기로 결정했습니다.\n\n혁명군은 공산당과 상당수의 군 탈영병들과 함께 프랑스 주요 도시의 주요 행정 건물과 통신 초소를 점령했습니다.\n\n그들의 요구는 파리 정부가 물러나 반란을 일으키는 쪽에 평화적으로 권력을 이양하라는 것입니다."
@@ -507,11 +507,11 @@
  france.1048.d:0 "이번 주 초, 프랑스와 독일 국경, 특히 알자스-로렌 지역에서 일련의 교전이 있었습니다.\n\n프랑스 외무부는 즉각적인 휴전과 이번 사건에 대한 조사를 요구하고 있는 반면, 독일 외무부는 1914년 국경 분쟁과 유사한 독일군의 즉각적인 지역 점령에 대한 최후통첩을 프랑스에 발표했습니다.\n\n프랑스가 어떤 반응을 보일지는 알 수 없지만, 분석가들은 유럽 대륙에서 큰 전쟁이 일어날 것으로 예상합니다..."
  france.1048.a:0 "좋지 않다."
  france.1049.t:0 "[FRA.GetLeader]의 프랑스 제위 주장"
- france.1049.d:0 "프랑스-프로이센 전쟁에서 패배한 이후, 프랑스는 공화국이었습니다. 그러나 오늘 파리에서에서 거행된 대관식에서 [FRA.GetLeader] 측은 공식적으로 모든 프랑스인의 황제로 즉위했습니다.\n\n프랑스에서 군주정의 성공은 공화국 정부가 정치적 극단주의자들의 충돌이 점차 심화되는 환경 속에서 정치적 안정을 제공하지 못한 것에 대한 직접적인 결과라고 여겨지고 있습니다.\n\n 제정 복고에도 불구하고, 프랑스 전역에는 여전히 새로운 법적 지도자를 인정하지 않는 정치 단체들이 있습니다. [FRA.GetLeader] 측은 이제 이러한 문제들을 직면해야 하고, 어떤 식으로든 해결하려고 노력해야 할 것입니다."
+ france.1049.d:0 "프랑스-프로이센 전쟁에서 패배한 이후, 프랑스는 공화국이었습니다. 그러나 오늘 파리에서 거행된 대관식에서 [FRA.GetLeader](은)는 공식적으로 모든 프랑스인의 황제로 즉위하였습니다.\n\n프랑스에서 군주정의 성공은 공화국 정부가 정치적 극단주의자들의 충돌이 점차 심화되는 환경 속에서 정치적 안정을 제공하지 못한 것에 대한 직접적인 결과라고 여겨지고 있습니다.\n\n 제정복고에도 불구하고, 프랑스 전역에는 여전히 새로운 법적 지도자를 인정하지 않는 정치 단체들이 있습니다. [FRA.GetLeader] 측은 이제 이러한 문제들을 직면하여야 하고, 어떤 식으로든 해결하려고 노력해야 할 것입니다."
  france.1049.a:0 "흥미롭군."
  france.1049.b:0 "황제 폐하꼐 영광을!"
  france.1050.t:0 "[FRA.GetLeader]의 프랑스 왕위 주장"
- france.1050.d:0 "프랑스-프로이센 전쟁에서 패배한 이후, 프랑스는 공화국이었습니다. 그러나 오늘 파리에서에서 거행된 대관식에서 [FRA.GetLeader] 측은 공식적으로 모든 프랑스인의 왕으로 즉위했습니다.\n\n프랑스에서 군주정의 성공은 공화국 정부가 정치적 극단주의자들의 충돌이 점차 심화되는 환경 속에서 정치적 안정을 제공하지 못한 것에 대한 직접적인 결과라고 여겨지고 있습니다.\n\n 왕정 복고에도 불구하고, 프랑스 전역에는 여전히 새로운 법적 지도자를 인정하지 않는 정치 단체들이 있습니다. [FRA.GetLeader] 측은 이제 이러한 문제들을 직면해야 하고, 어떤 식으로든 해결하려고 노력해야 할 것입니다."
+ france.1050.d:0 "프랑스-프로이센 전쟁에서 패배한 이후, 프랑스는 공화국이었습니다. 그러나 오늘 파리에서 거행된 대관식에서 [FRA.GetLeader](은)는 공식적으로 모든 프랑스인의 왕으로 즉위하였습니다.\n\n프랑스에서 군주정의 성공은 공화국 정부가 정치적 극단주의자들의 충돌이 점차 심화되는 환경 속에서 정치적 안정을 제공하지 못한 것에 대한 직접적인 결과라고 여겨지고 있습니다.\n\n 왕정복고에도 불구하고, 프랑스 전역에는 여전히 새로운 법적 지도자를 인정하지 않는 정치 단체들이 있습니다. [FRA.GetLeader] 측은 이제 이러한 문제들을 직면하여야 하고, 어떤 식으로든 해결하려고 노력해야 할 것입니다."
  france.1050.a:0 "흥미롭군."
  france.1050.b:0 "국왕 폐하께 영광을!"
  france.1051.t:0 "마르세유 시위!"
@@ -524,7 +524,7 @@
  france.1053.d:0 "수도에서 시위가 벌어지고 있습니다. 정부가 취한 새로운 반민주적 조치에 불만을 품은 파리 시민들이 거리로 몰려나옵니다. 현재로써는, 우리는 손상된 기반시설과 경찰과의 광범위한 충돌에 대한 보고를 받았습니다."
  france.1053.a:0 "시위는 사라질 것이다."
  france.1054.t:0 "바이에른 망명자들"
- france.1054.d:0 "독일 내전에서 붉은 군대가 패배한 후, 많은 공산주의자들뿐만 아니라 전투 병력들도 진격하는 프로이센 군대를 피해 프랑스로 피신하려고 시도했습니다.\n\n난민들을 어떻게 해야 합니까?"
+ france.1054.d:0 "독일 내전에서 붉은 군대가 패배한 이후, 많은 공산주의자들 뿐만 아니라 전투 병력도 진격하는 프로이센 군대를 피하여 프랑스로 피신하려고 시도하였습니다.\n\n난민들을 어떻게 하여야 할까요?"
  france.1054.a:0 "망명을 받아들여라."
  france.1054.b:0 "우리는 이 망명자들을 받아들일 수 없다."
  france.1055.t:0 "트로츠키가 복무를 제안하다"
