--- a/localisation/lar_focus_l_english.yml
+++ b/localisation/lar_focus_l_english.yml
@@ -1046,7 +1046,7 @@
  POR_a_powerful_merchant_marine_desc:0 "우리의 경제에 필요한 모든 자원을 수송할 수 있는 대형 상선대를 만들어야 합니다. 이는 더 작은 조선소에 상선을 건조함으로써 완료할 수 있을 겁니다."
  POR_merchant_marine_protection:0 "상선 보호"
  POR_merchant_marine_protection_desc:0 "대전에서의 경험은 우리에게 상선이 잠수함의 위협으로부터 보호되어야 한다는 것을 가르쳐줬습니다."
- POR_submarine_effort:0 "잠수함 개발"
+ POR_submarine_effort:0 "잠수함 주력"
  POR_submarine_effort_desc:0 "우리는 현대 잠수함의 연구와 생산을 시작해야 합니다. 이는 수중전에 참가하게 되면 강한 이점을 우리에게 제공할 것입니다."
  POR_fuzileiros:0 "해병대"
  POR_fuzileiros_desc:0 "잘 훈련된 해병대는 우리의 해외 재산들의 안전을 위해 필수적입니다."
