--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  LOADING_TIP_0:0 "전쟁이 아무리 필요하거나 정당하다고 해도 범죄가 아니라고 절대 생각하지 말라.\n- 어니스트 헤밍웨이"
  LOADING_TIP_1:0 "서로 싸우는 두 군대는 마치 자살하는 하나의 큰 군대와 같다.\n- 앙리 바르뷔스"
- LOADING_TIP_2:0 "아무리 작은 싸움도 큰 그림을 이루는 일부임을, 전투로 나서려는 모든 군인은 알아야만 한다.\n- 버나드 L. 몽고메리"
+ LOADING_TIP_2:0 "모든 병사들은 전투에 나가기 전에, 아무리 자신들이 작은 싸움도 큰 그림을 이루는 일부임을 알아야 한다.\n- 버나드 L. 몽고메리"
  LOADING_TIP_3:0 "나는 이 전쟁을 사랑하기 때문에 저주가 내게 쉬어야 한다고 생각한다. 나는 전쟁이 매 순간 수천 명의 삶을 산산조각 내고 있다는 것을 알고 있지만, 나는 어쩔 수 없다. 나는 매 초마다 전쟁을 즐긴다.\n- 윈스턴 처칠"
  LOADING_TIP_4:0 "타인을 믿는 것은 좋지만, 안 믿는 것은 더 좋다.\n- 베니토 무솔리니"
  LOADING_TIP_5:0 "전시에 애국이라는 단어는 진리의 억압을 의미한다.\n- 시그프리드 서순"
