--- a/localisation/modifiers_l_english.yml
+++ b/localisation/modifiers_l_english.yml
@@ -351,7 +351,7 @@
  MODIFIER_ENEMY_PARTISAN_EFFECT_FACTOR_DESC:0 "우리가 점령한 영토에서 적성 파르티잔이 효율적으로 조직되는 수치"
  MODIFIERS_ARMY_ATTACK_FACTOR:0 "사단 공격"
  MODIFIERS_ARMY_DEFENCE_FACTOR:0 "사단 방어"
- MODIFIERS_ARMY_CORE_ATTACK_FACTOR:0 "사단의 핵심 영토 공격력"
+ MODIFIERS_ARMY_CORE_ATTACK_FACTOR:0 "핵심 영토에서 사단 공격"
  MODIFIERS_ARMY_CORE_DEFENCE_FACTOR:0 "사단의 핵심 영토 방어력"
  MODIFIERS_ARMY_INFANTRY_ATTACK_FACTOR:0 "보병 공격"
  MODIFIERS_ARMY_INFANTRY_DEFENCE_FACTOR:0 "보병 방어"
@@ -393,8 +393,8 @@
  MODIFIER_AIR_SUPERIORITY_DETECT_FACTOR_DESC:0 "제공권 임무 수행 중 적기 포착의 확률."
  MODIFIER_STRAT_BOMBING_VISIBILITY:0 "전략폭격 은밀성"
  MODIFIER_STRAT_BOMBING_VISIBILITY_DESC:0 "전략폭격 임무 수행 중에 적군에 의해 발각될 확률."
- MODIFIER_ARMY_INFANTRY_ATTACK_FACTOR:0 "보병 사단 공격"
- MODIFIER_ARMY_INFANTRY_DEFENCE_FACTOR:0 "보병 사단 방어"
+ MODIFIER_ARMY_INFANTRY_ATTACK_FACTOR:0 "보병사단 공격"
+ MODIFIER_ARMY_INFANTRY_DEFENCE_FACTOR:0 "보병사단 방어"
  MODIFIER_ARMY_ARMOR_ATTACK_FACTOR:0 "기갑 사단 공격"
  MODIFIER_ARMY_ARMOR_DEFENCE_FACTOR:0 "기갑 사단 방어"
  MODIFIER_ARMY_ARTILLERY_ATTACK_FACTOR:0 "야포 공격"
