--- a/localisation/usa_events_l_english.yml
+++ b/localisation/usa_events_l_english.yml
@@ -20,7 +20,7 @@
  usa.99.a:0 "좋게 끝나지 않을 것이다..."
  usa.99.b:0 "좋게 끝나지 않을 것이다..."
  usa.10002.t:0 "1936년 미국 선거"
- usa.10002.d:0 "지난 4년간의 사건, 후버의 탄핵, 경제 붕괴, 그리고 전국적 식량 부족의 도래를 고려할 때, 이번 선거는 '1860년 이후 가장 중요한 선거'로 불리고 있습니다. 이번 선거는 처음으로 제3당의 승리할 수도 있다는 생각을 갖게 만듭니다. 네 명의 후보가 있습니다. 공화당 알프 랜든  주지사, 민주당 존 낸스 가너 하원의장, 몬태나의 사회당 버튼 K. 휠러 상원의원, 루이지애나의 '독재자' 미국제일당 휴이 롱 상원의원 등입니다. 전문가들은 이번 선거가 제2의 내전이 도래하는 결과를 낳을 수 있다고 경고하고 있습니다."
+ usa.10002.d:0 "지난 4년간의 사건, 후버의 탄핵, 경제 붕괴, 그리고 전국적 식량 부족의 도래를 고려할 때, 이번 선거는 '1860년 이후 가장 중요한 선거'로 불리고 있습니다. 이번 선거는 처음으로 제3당의 승리할 수도 있다는 생각을 갖게 만듭니다. 네 명의 후보가 있습니다. 공화당 알프 랜던 주지사, 민주당 존 낸스 가너 하원의장, 몬태나의 사회당 버튼 K. 휠러 상원의원, 루이지애나의 '독재자' 미국 제일당 휴이 롱 상원의원 등입니다. 전문가들은 이번 선거가 제2의 내전이 도래하는 결과를 낳을 수 있다고 경고하고 있습니다."
  usa.10002.a:0 "흥미롭군."
  usa.10002.b:0 "최고가 승리하길!"
  usa.100002.t:0 "맥아더가 워싱턴으로 진군할 준비를 하고 있다!"
@@ -28,10 +28,10 @@
  usa.100002.a:0 "그는 허세를 부리고 있다."
  usa.100002.b:0 "그를 체포해!"
  usa.6.t:0 "[GetYear]년 선거"
- usa.6.d:0 "지난 4년간의 사건, 후버의 탄핵, 경제 붕괴, 그리고 전국적 식량 부족의 도래를 고려할 때, 이번 선거는 '1860년 이후 가장 중요한 선거'로 불리고 있습니다. 이번 선거는 처음으로 제3당의 승리할 수도 있다는 생각을 갖게 만듭니다. 네 명의 후보가 있습니다. 공화당 알프 랜든 주지사, 민주당 존 낸스 가너 하원의장, 몬태나의 사회당 버튼 K. 휠러 상원의원, 루이지애나의 '독재자' 미국제일당 휴이 롱 상원의원 등입니다. 전문가들은 이번 선거가 제2의 내전이 도래하는 결과를 낳을 수 있다고 경고하고 있습니다."
+ usa.6.d:0 "지난 4년간의 사건, 후버의 탄핵, 경제 붕괴, 그리고 전국적 식량 부족의 도래를 고려할 때, 이번 선거는 '1860년 이후 가장 중요한 선거'로 불리고 있습니다. 이번 선거는 처음으로 제3당의 승리할 수도 있다는 생각을 갖게 만듭니다. 네 명의 후보가 있습니다. 공화당 알프 랜던 주지사, 민주당 존 낸스 가너 하원의장, 몬태나의 사회당 버튼 K. 휠러 상원의원, 루이지애나의 '독재자' 미국 제일당 휴이 롱 상원의원 등입니다. 전문가들은 이번 선거가 제2의 내전이 도래하는 결과를 낳을 수 있다고 경고하고 있습니다."
  usa.6.a:0 "민주당."
  usa.6.b:0 "공화당."
- usa.6.c:0 "미국제일당."
+ usa.6.c:0 "미국 제일당."
  usa.6.e:0 "사회당."
  usa.7.t:0 "[GetYear]년 선거"
  usa.7.d:0 "이제 새로운 선거를 치를 때입니다. 이번에는 가너 대 위키입니다. 가너는 민주당을 대표하며 위키는 공화당을 대표하는 후보입니다. 누가 이길 것입니까?"
@@ -60,17 +60,17 @@
  usa.13.d:0 "비록 루스벨트 대통령의 건강은 한동안 하락하고 있지만, 그의 강력한 대선 운동은 많은 사람들에게 그가 수년이 남았다고 확신시켰습니다. 하지만, 아직 재직 중 루스벨트의 사망 가능성은 여전했고, 오늘은 뇌졸중으로 쓰러진 뒤 세상을 떠났습니다. 해리 S. 트루먼 부통령은 이제 국민의 지지와 기도를 요청하며 취임 선서를 했습니다. 낡은 내각이 남아 있고 트루먼은 전임자의 많은 정책을 계속하겠다고 다짐했습니다."
  usa.13.a:0 "그래서 한 시대가 끝나고, 또 다른 시대가 시작되었다."
  usa_elections.1.t:0 "[GetYear]년 선거"
- usa_elections.1.d:0 "지난 4년간의 사건, 후버의 탄핵, 경제 붕괴, 그리고 전국적 식량 부족의 도래를 고려할 때, 이번 선거는 '1860년 이후 가장 중요한 선거'로 불리고 있습니다.\n이번 선거는 처음으로 제3당의 승리할 수도 있다는 생각을 갖게 만듭니다. 네 명의 후보가 있습니다. 공화당 알프 랜든 주지사, 민주당 존 낸스 가너 하원의장, 몬태나의 사회당 버튼 K. 휠러 상원의원, 루이지애나의 '독재자' 미국제일당 휴이 롱 상원의원 등입니다.\n전문가들은 이번 선거가 제2의 내전이 도래하는 결과를 낳을 수 있다고 경고하고 있습니다."
+ usa_elections.1.d:0 "지난 4년간의 사건, 후버의 탄핵, 경제 붕괴, 그리고 전국적 식량 부족의 도래를 고려할 때, 이번 선거는 '1860년 이후 가장 중요한 선거'로 불리고 있습니다.\n이번 선거는 처음으로 제3당의 승리할 수도 있다는 생각을 갖게 만듭니다. 네 명의 후보가 있습니다. 공화당 알프 랜던 주지사, 민주당 존 낸스 가너 하원의장, 몬태나의 사회당 버튼 K. 휠러 상원의원, 루이지애나의 '독재자' 미국 제일당 휴이 롱 상원의원 등입니다.\n전문가들은 이번 선거가 제2의 내전이 도래하는 결과를 낳을 수 있다고 경고하고 있습니다."
  usa_elections.1.a:0 "민주당."
  usa_elections.1.b:0 "공화당."
- usa_elections.1.c:0 "미국제일당."
+ usa_elections.1.c:0 "미국 제일당."
  usa_elections.1.e:0 "사회당."
  usa_elections.2.t:0 "[GetYear]년 선거"
  usa_elections.2.d:0 "가너 대통령의 첫 임기는 모든 것을 고려해 잘 진행됐습니다.\n롱 상원의원 암살과 민주사회당 통합 이후 많은 사람들은 헨리 스팀슨이 승리할 가능성이 없고 가너의 재선도 조지 워싱턴처럼 확실하다고 보지만, 그게 맞을지는..."
  usa_elections.2.a:0 "민주당."
  usa_elections.2.b:0 "공화당."
  usa_elections.3.t:0 "[GetYear]년 선거"
- usa_elections.3.d:0 "랜든 대통령은 과장 없이 가장 격동적인 임기를 보냈습니다. 1937년 사회주의자들의 폭동은 그의 평판을 손상시켰고 1938년 중간선거의 충격으로 공화당이 소멸할 뻔했습니다. 랜던은 재지명되었습니다.\n그는 앨벤 바클리 상원 원내대표에 대한 재선거가 어려운 상황에 직면해 있습니다. 그는 계속해서 15%를 넘고 있습니다. 랜든의 승리는 불과 4년 전 롱의 승리와 다름없어 보입니다."
+ usa_elections.3.d:0 "랜던 대통령은 과장 없이 가장 격동적인 임기를 보냈습니다. 1937년 사회주의자들의 폭동은 그의 평판을 손상시켰고 1938년 중간선거의 충격으로 공화당이 소멸할 뻔했습니다. 랜던은 재지명되었습니다.\n그는 앨번 바클리 상원 원내대표에 대한 재선거가 어려운 상황에 직면해 있습니다. 그는 계속해서 15%를 넘고 있습니다. 랜던의 승리는 불과 4년 전 롱의 승리와 다름없어 보입니다."
  usa_elections.3.a:0 "민주당."
  usa_elections.3.b:0 "공화당."
  usa_elections.4.t:0 "[GetYear]년 선거"
@@ -86,11 +86,11 @@
  usa_elections.6.a:0 "민주당."
  usa_elections.6.b:0 "공화당."
  usa_elections.7.t:0 "[GetYear]년 선거"
- usa_elections.7.d:0 "1940년 랜든 대통령의 충격적 승리는 바클리 상원의원의 58%에 비해 30%의 득표율을 차지해 우리 민주주의의 핵심으로 가는 의문을 제기했습니다. 그 결과, 정당과 나라 전역의 많은 사람들은 레이번 의장이 듀이 주지사에 대한 승리를 거의 장담하지 못하고 있다고 보고 있습니다."
+ usa_elections.7.d:0 "1940년 랜던 대통령의 충격적 승리는 바클리 상원의원의 58%에 비해 30%의 득표율을 차지하여 우리 민주주의의 핵심으로 가는 의문을 제기하였습니다. 그 결과, 정당과 나라 전역의 많은 사람들은 레이번 의장이 듀이 주지사에 대한 승리를 거의 장담하지 못하고 있다고 보고 있습니다."
  usa_elections.7.a:0 "민주당."
  usa_elections.7.b:0 "공화당."
  usa_elections.8.t:0 "[GetYear]년 선거"
- usa_elections.8.d:0 "제2차 미국 내전 발발에도 불구하고, 국민의 사기를 높이고 미국에 어느 정도 안정을 가져오기 위해 대선을 치르기로 결정됐습니다.\n하지만 이번에는 알벤 바클리가 민주당을, 헨리 스팀슨이 공화당원을 대표할 예정입니다."
+ usa_elections.8.d:0 "제2차 미국 내전 발발에도 불구하고, 국민의 사기를 높이고 미국에 어느 정도 안정을 가져오고자 대선을 치르기로 결정되었습니다.\n하지만 이번에는 앨번 바클리가 민주당을, 헨리 스팀슨이 공화당원을 대표할 예정입니다."
  usa_elections.8.a:0 "민주당."
  usa_elections.8.b:0 "공화당."
  usa_homeland.1.t:0 "독재자의 죽음"
@@ -102,11 +102,11 @@
  usa_homeland.5.t:0 "커티스의 심장마비"
  usa_homeland.5.d:0 "오늘 새벽, 커티스 대통령이 심장마비를 일으킨 사실이 드러났습니다. 아직 건강은 양호한 편이지만, 이번 사건으로 11월 재선에 출마할지 여부에 대한 의구심이 커지고 있습니다."
  usa_homeland.5.a:0 "우리는 그가 빨리 회복되기를 바란다."
- usa_homeland.6.t:0 "공화당 전당 대회"
- usa_homeland.6.d:0 "커티스 대통령의 심장마비에 이어 공화당 표까지 발표되면서 재선에 나서지 않겠다고 선언했습니다.\n그의 자리에서, 당은 캔자스의 알프 랜든 주지사를 대통령으로, 아이다호의 윌리엄 보라 상원의원을 부통령 후보로 지명했습니다."
+ usa_homeland.6.t:0 "공화당 전당대회"
+ usa_homeland.6.d:0 "커티스 대통령의 심장마비에 이어 공화당 표까지 발표되면서 재선에 나서지 않겠다고 선언하였습니다.\n그 자리에서, 당은 알프 랜던 캔자스 주지사를 대통령으로, 윌리엄 보라 아이다호주 상원의원을 부통령 후보로 지명하였습니다."
  usa_homeland.6.a:0 "더 나은 것을 위해서다."
- usa_homeland.7.t:0 "민주당 전당 대회"
- usa_homeland.7.d:0 "민주당 표는 존 낸스 가너 텍사스주 하원의장으로, 존 리드 전 미주리주 상원의원은 부통령으로 각각 발표됐습니다."
+ usa_homeland.7.t:0 "민주당 전당대회"
+ usa_homeland.7.d:0 "민주당 표는 존 낸스 가너 텍사스주 하원의장으로, 존 리드 전 미주리주 상원의원은 부통령으로 각각 발표되었습니다."
  usa_homeland.7.a:0 "알았다."
  usa_homeland.8.t:0 "의회 선거 결과"
  usa_homeland.8.d:0 "대통령 선거와 함께 의회는 다음과 같은 선거를 치릅니다:"
@@ -114,13 +114,13 @@
  usa_homeland.8.b:0 "공화당이 의회를 차지한다."
  usa_homeland.8.c:0 "의석을 나눠 가진다."
  usa_homeland.9.t:0 "1937년 오하이오 강 홍수"
- usa_homeland.9.d:0 "1937년 오하이오 강의 홍수는 1937년 1월 말과 2월에 일어났습니다.\n피츠버그에서 일리노이 카이로까지 피해가 확대되면서 100만 명의 이재민이 발생했고, 385명이 사망하고 재산 손실이 5억 달러가 넘었습니다.\n남부 오하이오는 역사상 최악의 홍수에 직면했습니다. 홍수 수위가 거의 80피트에 달하는 신시내티 시에서는 특히 곤경을 걲었습니다."
- usa_homeland.9.a:0 "끔찍하다!"
+ usa_homeland.9.d:0 "1937년 오하이오강의 홍수는 1937년 1월 말과 2월에 일어났습니다.\n피츠버그에서 일리노이의 카이로까지 피해가 확대되면서 100만 명의 사람들이 집을 잃고, 385명이 사망하였으며 재산 손실이 5억 달러가 넘었습니다.\n오하이오 남부는 역사상 최악의 홍수에 직면하였습니다. 홍수 수위가 거의 80피트에 달하는 신시내티시에서는 특히 곤경을 겪었습니다."
+ usa_homeland.9.a:0 "끔찍하군!"
  usa_homeland.10.t:0 "금문교의 개통"
- usa_homeland.10.d:0 "[GetLeader] 대통령은 오늘 캘리포니아 주 샌프란시스코에 금문교를 열었고, 그 개통식은 아직 더 나은 날들을 예고하는 역할을 합니다."
+ usa_homeland.10.d:0 "[GetLeader] 대통령은 오늘 캘리포니아주 샌프란시스코에 금문교를 개통식을 열었고, 그 개통식은 아직 더 나은 날들을 예고하는 역할을 합니다."
  usa_homeland.10.a:0 "좋아."
  usa_homeland.11.t:0 "중간선거"
- usa_homeland.11.d:0 "중간선거는 대통령 임기 4년 중반을 전후해 치러지는 총선입니다. 중간선거 기간 중 선거를 앞두고 있는 연방 사무소에는 미 하원이 435석, 미 상원이 96석 가운데 32석이 모두 포함돼 있습니다."
+ usa_homeland.11.d:0 "중간선거는 대통령 임기 4년 중반을 전후해 치러지는 총선입니다. 중간선거 기간 중 선거를 앞두고 있는 연방 사무소에는 미 하원이 435석, 미 상원이 96석 가운데 32석이 모두 포함되어 있습니다."
  usa_homeland.11.a:0 "민주당이 의회를 차지한다."
  usa_homeland.11.b:0 "공화당이 의회를 차지한다."
  usa_homeland.11.c:0 "의석을 나눠 가진다."
@@ -135,26 +135,26 @@
  usa_homeland.14.d:0 "극도의 반대파 단체들이 현 정부에 대한 깊은 분노와 1936년 결과에 대한 불행을 보여주기 위해 거리로 나서자 워싱턴은 서서히 무너져 내렸습니다.\n전국적인 식량 부족과 미국의 농업 위기로 상황은 더욱 악화되고 있습니다."
  usa_homeland.14.a:0 "좋지 않은데..."
  usa_homeland.15.t:0 "내전!"
- usa_homeland.15.d:0 "우리는 남부 주 지역에서 무장 봉기가 일어났다는 보고를 받았습니다. 반란군은 아메리카 연합국을 선포하며 해당 지역의 산업 및 군사 시설을 점령했습니다.\n 그들은 1936년 선거에서 우파 정당 대표인 휴이 롱이 이끌고 있습니다. 봉기는 민주당 주도 정부의 종식과 우익 정권 수립을 요구합니다."
+ usa_homeland.15.d:0 "우리는 남부 주 지역에서 무장봉기가 일어났다는 보고를 받고 있습니다. 반군은 아메리카 연합국을 선포하고 해당 지역의 산업 및 군사시설을 점령하였습니다.\n 1936년 선거에서 우파 정당 대표였던 휴이 롱이 그들을 이끌고 있습니다. 봉기는 민주당 주도 정부의 종식과 우익 정권 수립을 요구합니다."
  usa_homeland.15.a:0 "롱 패거리에게 죽음을!"
  usa_homeland.16.t:0 "백악관을 향한 공격!"
  usa_homeland.16.d:0 "가너 대통령과 존 리드 부통령이 사망한 가운데 실버 군단 민병대의 공격으로 워싱턴은 오늘 혼란에 빠졌습니다.\n\n남은 내각 인사들 중 최고위 인사는 프란체스 퍼킨스 노동부 장관으로, 휴즈 대법원장이 내일 국회의사당 로툰다에서 취임 선서를 할 것으로 보입니다."
  usa_homeland.16.a:0 "다행히 최악의 상황은 끝났다."
  usa_homeland.17.t:0 "백악관을 향한 공격!"
- usa_homeland.17.d:0 "미국 정부는 오늘 랜든 대통령이 사망한 가운데 알 수 없는 마르크스주의 민병대의 공격으로 인해 혼란에 빠졌습니다. 당시 아이다호에 있는 자신의 목장에 있던 보라 부통령도 백악관 테러 이후 목장에서 폭행을 당해 사망했습니다.\n\n후버 행정부와 커티스 행정부의 베테랑인 스팀슨 국무장관은 그 당시 영국에 있었고 즉시 돌아오고 있습니다. 국회의사당 로툰다에서 이틀 후에 그의 취임 선서를 할 것입니다."
+ usa_homeland.17.d:0 "워싱턴은 오늘 랜던 대통령이 사망한 가운데 알 수 없는 마르크스주의 민병대의 공격으로 혼란에 빠졌습니다. 당시 아이다호의 자신의 목장에 있던 보라 부통령도 백악관 테러 이후 목장에서 폭행당한 후 사망하였습니다.\n\n후버 행정부와 커티스 행정부의 베테랑인 스팀슨 국무장관은 그 당시 영국에 있었고 즉시 돌아오고 있습니다. 그의 취임 선서는 며칠 후 국회의사당 로툰다에서 열릴 것입니다."
  usa_homeland.17.a:0 "다행히 최악의 상황은 끝났다."
  usa_homeland.18.t:0 "일리노이 반란!"
- usa_homeland.18.d:0 "오대호 지역에서 무장 봉기가 일어났다는 보고를 받고 있습니다. 반군은 아메리카 코뮌을 선포하며 해당 지역의 산업 및 군사 시설을 점령했습니다.\n 그들은 1936년 선거에서 사회주의 정당 대표인 얼 브라우더가 이끌었습니다. 봉기는 공화당 정부의 종식과 사회주의-마르크스 정권의 수립을 요구합니다."
+ usa_homeland.18.d:0 "우리는 오대호 지역에서 무장봉기가 일어났다는 보고를 받고 있습니다. 반군은 아메리카 코뮌을 선포하고 해당 지역의 산업 및 군사시설을 점령하였습니다.\n 1936년 선거에서 사회당 대표였던 얼 브라우더가 그들을 이끌고 있습니다. 봉기는 공화당 정부의 종식과 사회주의-마르크스 정권의 수립을 요구합니다."
  usa_homeland.18.a:0 "공산주의자들에게 죽음을!"
  usa_homeland.19.t:0 "미국의 위기!"
  usa_homeland.19.d:0 "오늘 전국적으로 극도의 폭동이 일어난 가운데 제2차 미국 내전이 발발하며, 미국 대통령이 계엄령을 선포했습니다.\n\n미 육해군의 무려 40%가 봉기에 동참하면서 상황은 더욱 악화되고 있습니다. 미국은 다시 한번 내전에 휘말렸습니다. 이번에는 두 정치체제 사이의 내전입니다.\n\n오직 시간만이 미국이 권위주의 국가가 될 것인지, 아니면 국민을 위한 그리고 국민에 의한 국가가 될 것인지를 말해줄 것입니다."
  usa_homeland.19.a:0 "걱정되는군..."
  usa_homeland.19.b:0 "걱정되는군..."
  usa_homeland.3.t:0 "내전!"
- usa_homeland.3.d:0 "남부 주 지역에서 무장 봉기가 일어났다는 보고를 받고 있습니다. 반란군은 아메리카 연합국을 선포하며 해당 지역의 산업 및 군사 시설을 점령했습니다.\n 그들은 1936년 선거에서 우파 정당 대표인 휴이 롱이 이끌고 있습니다. 봉기는 사회주의 주도 정부의 종식과 우익 정권 수립을 요구합니다."
+ usa_homeland.3.d:0 "우리는 남부 주 지역에서 무장봉기가 일어났다는 보고를 받고 있습니다. 반군은 아메리카 연합국을 선포하고 해당 지역의 산업 및 군사시설을 점령하였습니다.\n 1936년 선거에서 우파 정당 대표였던 휴이 롱이 그들을 이끌고 있습니다. 봉기는 사회당 주도 정부의 종식과 우익 정권 수립을 요구합니다."
  usa_homeland.3.a:0 "롱 패거리에게 죽음을!"
  usa_homeland.4.t:0 "내전!"
- usa_homeland.4.d:0 "오대호 지역에서 무장 봉기가 일어났다는 보고를 받고 있습니다. 반군은 아메리카 코뮌을 선포하며 해당 지역의 산업 및 군사 시설을 점령했습니다.\n 그들은 1936년 선거에서 사회주의 정당 대표인 얼 브라우더가 이끌었습니다. 이 봉기는 민주 주도 정부의 종식과 사회주의-마르크스 정권의 수립을 요구합니다."
+ usa_homeland.4.d:0 "우리는 오대호 지역에서 무장봉기가 일어났다는 보고를 받고 있습니다. 반군은 아메리카 코뮌을 선포하고 해당 지역의 산업 및 군사시설을 점령하였습니다.\n 1936년 선거에서 사회당 대표였던 얼 브라우더가 그들을 이끌고 있습니다. 이 봉기는 민주당 주도 정부의 종식과 사회주의-마르크스 정권의 수립을 요구합니다."
  usa_homeland.4.a:0 "공산주의자들에게 죽음을!"
  usa_homeland.20.t:0 "뉴잉글랜드 점령"
  usa_homeland.20.d:0 "미국은 중대한 위기에 처해 있습니다! 우리는 이 기회를 이용하여 뉴잉글랜드를 점령하고 캐나다에 통합할 수 있습니다. 그러나 이것은 미국 정부와의 관계를 손상시키고 잠재적으로 중단시킬 것입니다. 그러나 우리는 그들이 살아남을지조차 확신할 수 없습니다."
@@ -168,7 +168,7 @@
  usa_homeland.22.d:0 "제2차 미국 남북전쟁은 이제 합법적인 정부에 대한 반란의 패배로 마무리되었고, [GetLeader]의 지도력이 전쟁 내내 국가의 다수 지지를 받았으며 현재 연합을 다시 건설해야 하는 어려운 과제에 직면해 있다는 것을 증명했습니다."
  usa_homeland.22.a:0 "만세!"
  usa_homeland.23.t:0 "미국 내전의 끝!"
- usa_homeland.23.d:0 "[GetLeader] 대통령은 오늘 백악관 잔당으로부터 반역 세력의 항복과 제2차 미국 내전의 종식을 알리는 대국민 연설을 했습니다. 대통령은 다른 주요 정당들의 지도자들과 함께 했고 그들은 모두 재건설과 잠재적 개헌에 대한 양당간의 노력을 발표했습니다.\n[GetLeader] 대통령은 또한 역사상 처음으로 반역죄로 대법원에 재판을 받게 된 반란 지도자들을 제외하고, 연합에 대항하여 무기를 든 모든 사람들에게 사면을 허용하는 행정명령에 서명했습니다.\n미국의 가장 어두운 시절은 끝난 것으로 보이며, 유럽의 고조되는 긴장감은 20세기 후반과 그 이후까지 미국이 세계에서 주도적인 역할을 할 수 있게 해줄지도 모릅니다."
+ usa_homeland.23.d:0 "[GetLeader] 대통령은 오늘 백악관 잔당으로부터 반란군의 항복과 제2차 미국 내전의 종식을 알리는 대국민 연설을 하였습니다. 대통령은 다른 주요 정당들의 지도자들과 함께하였고 그들은 모두 재건과 잠재적 개헌에 대한 양당 간의 노력을 발표하였습니다.\n[GetLeader] 대통령은 또한 역사상 처음으로 반역죄로 대법원에 재판을 받게 된 반란 지도자들을 제외하고, 연합에 대항하여 무기를 든 모든 사람들에게 사면을 허용하는 행정명령에 서명하였습니다.\n미국의 가장 어두운 시절은 끝난 것으로 보이며, 유럽의 고조되는 긴장감은 20세기 후반과 그 이후까지 미국이 세계에서 주도적인 역할을 할 수 있게 해줄지도 모릅니다."
  usa_homeland.23.a:0 "알았다."
  usa_homeland.23.b:0 "알았다."
  USA_civil_war_name_communism:0 "아메리카 코뮌"
@@ -193,5 +193,5 @@
  stimson_president_2:0 "헨리 스팀슨이 재선에서 대통령에 당선됨"
  dewey_president_1:0 "토마스 E. 듀이가 대통령에 당선됨"
  rayburn_president_1:0 "샘 레이번이 대통령에 당선됨"
- barkley_president_1:0 "알벤 W. 바클리가 대통령에 당선됨"
+ barkley_president_1:0 "앨번 W. 바클리가 대통령에 당선됨"
  perkins_president_1:0 "프란시스 퍼킨스가 권력을 잡음"
