--- a/localisation/usa_focus_l_english.yml
+++ b/localisation/usa_focus_l_english.yml
@@ -1,18 +1,18 @@
 ﻿l_english:
  US_rust_belt:0 "러스트 벨트 활성화"
- US_rust_belt_desc:0 "불황이 시작된 이후 러스트 벨트에 있던 우리 공장들이 혼란에 빠졌는데, 이제는 경제 회복을 위해 이를 다시 활용해야 합니다."
+ US_rust_belt_desc:0 "불황이 시작된 이후 러스트 벨트의 우리 공장들은 혼란에 빠졌는데, 이제는 경제 회복을 위하여 다시 사용할 필요가 있습니다."
  US_new_construction:0 "새로운 건설 기회"
  US_new_construction_desc:0 "우리나라는 광대한 나라입니다. 우리는 더 많은 시골 주들을 산업화함으로써 그 공장들을 이용해야 합니다."
  US_mid_west:0 "중서부 확장"
- US_mid_west_desc:0 "중서부 지역은 오랫동안 러스트 벨트의 본거지입니다다. 이제 산업 역량을 키우려면 지역을 개선해야 합니다."
+ US_mid_west_desc:0 "중서부 지역은 오랫동안 러스트 벨트의 본거지였습니다. 이제 산업 역량을 키우려면 지역을 발전시켜야 합니다."
  US_federal_research_grants:0 "연방 연구 보조금"
- US_federal_research_grants_desc:0 "연방 정부는 여전히 많은 재정 예비비를 가지고 있습니다. 우리는 그것의 일부를 우리의 산업 기술을 향상시키기 위해 지정해야 합니다."
+ US_federal_research_grants_desc:0 "연방정부는 여전히 많은 재정 예비비를 가지고 있습니다. 우리는 그것의 일부를 우리의 산업 기술을 향상시키는 쪽으로 지정하여야 합니다."
  US_fort_CAN:0 "캐나다 국경 요새화"
  US_fort_MEX:0 "멕시코 국경 요새화"
  US_fort_MEX_desc:0 "우리 남쪽 국경을 지켜야 합니다. 멕시코는 불안정한 나라이고 우리는 마약이나 위험한 사람들을 우리 나라로 유입시킬 수 없습니다."
  US_resource_effort:0 "자원 주력"
  US_resource_effort_desc:0 "우리 경제는 수출이 번창할 필요가 있습니다. 자원 생산을 확대하면 경제를 더욱 발전시키는 데 도움이 될 것입니다."
- US_highways:0 "주간고속도로 주력"
+ US_highways:0 "주간 고속도로 주력"
  US_highways_desc:0 "국가 인프라가 부족합니다. 우리 경제가 발전하려면 우리 주 사이의 고속도로를 개선해야 합니다."
  US_fort_coastline:0 "해안 요새화"
  US_fort_coastline_desc:0 "우리의 해안선에는 적의 침입을 위한 완벽한 장소들이 많이 있습니다. 우리는 우리 해안의 가장 취약하고 필수적인 부분을 강화해야 합니다."
@@ -40,18 +40,18 @@
  US_nuclear_effort_desc:0 "뉴멕시코의 한 사막에서는 지금까지 볼 수 없었던 폭탄을 만들기 위한 실험이 진행되고 있습니다. 핵무기는 세계 지배의 열쇠이고, 우리는 어떤 대가를 치르더라도 핵무기를 가진 첫 번째 국가가 되어야 합니다."
  US_rocketry_effort:0 "로켓 공학 연구"
  US_rocketry_effort_desc:0 "로켓은 우리에게 이전보다 더 빨리 여행할 수 있는 수단을 제공하는데, 이것은 조사할 가치가 있는 기술입니다."
- US_federal_expansion:0 "연방 정부 확대"
- US_federal_expansion_desc:0 "연방정부는 지난 16년 동안 축소되었습니다. 이제 1930년대 후반에 우리가 직면한 문제에 대응할 능력이 없다는 것이 증명되었습니다. 미래에 대비하기 위해 연방정부를 확대해야 합니다."
+ US_federal_expansion:0 "연방정부 확장"
+ US_federal_expansion_desc:0 "연방정부는 지난 16년 동안 축소되었습니다. 이제 1930년대 후반에 우리가 직면한 문제에 대응할 능력이 없다는 것이 증명되었습니다. 미래에 대비하려면 연방정부를 확장하여야 합니다."
  US_issue_executive:0 "행정명령 발동"
- US_issue_executive_desc:0 "우리 행정부는 스스로 무너지고 있습니다. 의회가 분열되고 기능이 부실한 만큼, 행정부를 개혁·확대하기 위해 일련의 행정명령을 발동해야 합니다."
- US_dpt_labour:0 "노동부 확대"
+ US_issue_executive_desc:0 "우리 행정부는 스스로 무너지고 있습니다. 의회가 분열되고 기능이 부실한 만큼, 행정부를 개혁하고 확장하려면 일련의 행정명령을 발동하여야 합니다."
+ US_dpt_labour:0 "노동부 확장"
  US_dpt_labour_desc:0 "노동부는 사회주의를 도입하기에 완벽한 곳입니다. 우리는 그 부처의 권한을 확대하고 그렇게 할 수 있는 권한을 주어야 합니다."
  US_dpt_agriculture:0 "농무부 확대"
- US_dpt_agriculture_desc:0 "우리는 지난 4년 동안 기근에 시달려 왔습니다. 기근에서 회복하려면 부처를 개혁해야 합니다."
+ US_dpt_agriculture_desc:0 "우리는 지난 4년 동안 기근에 시달려 왔습니다. 기근에서 회복하려면 부처를 개혁하여야 합니다."
  US_reform_judiciary:0 "법무부 개혁"
  US_reform_judiciary_desc:0 "법무부는 지난 몇 년 동안 뒤떨어지기 시작했고 1년을 꼬박 채워도 다 끝내지 못할 만큼의 재판이 남아 있습니다. 법무부 체계를 정비하는 것만으로도 이 문제를 해결할 수 있을 것입니다."
  US_reform_treasury:0 "재무부 개혁"
- US_reform_treasury_desc:0 "재무부는 경제를 유지하는 열쇠입니다. 불경기의 시작, 부처 개혁과 구조조정은 문제를 해결하기 위해 취해져야 할 매우 분명한 조치입니다."
+ US_reform_treasury_desc:0 "재무부는 경제를 유지하는 열쇠입니다. 불경기의 시작, 부처 개혁과 구조조정은 문제를 해결하려면 취해져야 할 매우 분명한 조치입니다."
  US_ally_silver_legion:0 "선전부 설립"
  US_ally_silver_legion_desc:0 "우리가 집권한 이후, 꽤 많은 반대가 있었습니다. 우리는 우리의 지지를 증가시키기 위해 선전을 시작해야 합니다."
  US_equality:0 "고용기회균등법"
@@ -85,9 +85,9 @@
  US_establish_foreign_security:0 "외무부 보안국 설립"
  US_establish_foreign_security_desc:0 "캘빈 쿨리지 대통령 시절부터 외교 문제에 개입할 수단이 부족했습니다. 외무부 보안국을 설립하는 것은 우리에게 다시 한번 그런 능력을 줄 것입니다."
  US_state_dpt:0 "국무부 확장"
- US_state_dpt_desc:0 "하딩 독트린은 국무부를 구색만 남은 부서로 만들었습니다. 이제 유럽에서 일어난 최근의 사건들과 함께, 우리는 이러한 사건들이 가까운 미래에 야기될 수 있는 잠재적인 대학살에 적절히 대비하기 위해 새롭게 확장된 국무부가 필요합니다."
+ US_state_dpt_desc:0 "하딩 독트린은 국무부를 구색만 남은 부서로 만들었습니다. 이제 유럽에서 일어난 최근의 사건들과 함께, 우리는 이러한 사건들이 가까운 미래에 야기될 수 있는 잠재적인 대학살에 적절히 대비할 수 있도록 새롭게 확장된 국무부가 필요합니다."
  US_harding_doctrine:0 "하딩 독트린 폐기"
- US_harding_doctrine_desc:0 "하딩 독트린은 1922년부터 미국을 고립주의 정책에 가두어 두었고 그의 후계자들은 이 정책을 계속 추진해 왔습니다. 미국은 앞으로 몇 년 동안 중요한 역할을 해야 하며, 우리는 이 독트린을 계속 따르는 동안에는 그 역할을 할 수 없습니다."
+ US_harding_doctrine_desc:0 "하딩 독트린은 1922년부터 미국을 고립주의 정책에 가두어 두었고 그의 후계자들은 이 정책을 계속 추진해 왔습니다. 미국은 앞으로 몇 년 동안 중요한 역할을 하여야 하며, 우리는 이 독트린을 계속 따르는 동안에는 그 역할을 할 수 없습니다."
  US_monroe_doctrine:0 "먼로 독트린 재수립"
  US_monroe_doctrine_desc:0 "100여 년 전으로 거슬러 올라가면, 먼로 독트린은 유럽이 아메리카 대륙을 식민지로 만들려는 시도에 미국이 개입하는 것을 성문화했습니다. 그러나 유럽 문제에는 관여하지 않았습니다. 이들 대륙에서 평화 유지자 역할을 강화하면 그 지역에서 우리의 영향력이 향상될 것입니다."
  US_americas:0 "북아메리카와 라틴 아메리카"
@@ -131,7 +131,7 @@
  US_war_RUS:0 "전쟁 계획 라임"
  US_war_RUS_Desc:0 "러시아가 선을 넘었습니다. 유럽에 대한 그들의 지배는 끝나야 합니다. 그리고 그것은 확실히 협상 석상에서 끝나지 않을 것입니다. 지금 조치를 취해야 합니다. 전쟁 계획 라임을 발동해야 합니다!"
  US_war_powers_act:0 "전쟁권한법"
- US_war_powers_act_desc:0 "미 육군의 현대화에 있어서 전쟁권한법의 통과는 필수입니다다. 이 법안이 통과되면 새로운 군 지휘부, 즉 펜타곤이 건설될 것입니다."
+ US_war_powers_act_desc:0 "미 육군의 현대화에 있어서 전쟁권한법의 통과는 필수입니다. 이 법안이 통과되면 새로운 군 지휘부, 즉 펜타곤이 건설될 것입니다."
  US_dpt_defense:0 "국방부"
  US_dpt_defense_desc:0 "펜타곤의 건설로 우리는 육군과 해군 부서를 하나의 국방부로 통합할 수 있습니다."
  US_armor_corps:0 "기갑 주력"
